--- a/_posts/2018-07-14-Android学习之路.md
+++ b/_posts/2018-07-14-Android学习之路.md
@@ -4,9 +4,9 @@ title:  安卓学习之路
 date:   2018-07-14 20:20
 categories: jekyll update
 ---
-1、视频是怎么创建的
-2、视频怎么播放的
-3、数据库升级策略
+- 1、视频是怎么创建的
+- 2、视频怎么播放的
+- 3、数据库升级策略
 ```
 APP
 |——HTPP请求
@@ -18,6 +18,7 @@ APP
 		|——缓存机制
 		|——编码压缩
 		|——解码图片，参数的含义等
+\n\n\n\n
 |——内存管理
 |——RxJava响应式编程
 |——注解自动生成代码
