modified exerpt_separator,add favicon

--- a/_posts/2018-07-14-Android学习之路.md
+++ b/_posts/2018-07-14-Android学习之路.md
@@ -3,14 +3,15 @@ layout: post
 title:  安卓学习之路
 date:   2018-07-14 20:20
 categories: jekyll update
+
 ---
-- 1、视频是怎么创建的
+>1、视频是怎么创建的
 
-- 2、视频怎么播放的
+>2、视频怎么播放的
 
-- 3、数据库升级策略
+>3、数据库升级策略
 
-- 4、APP路线图
+>4、APP路线图
 
 ```
 APP
@@ -23,6 +24,7 @@ APP
 		|——缓存机制
 		|——编码压缩
 		|——解码图片，参数的含义等
+
 |——内存管理
 |——RxJava响应式编程
 |——注解自动生成代码
@@ -37,6 +39,9 @@ APP
 		|——视频编辑处理技术
 |——Material的新功能设计、动画设计
 ```
+<!-- more -->
+
+>Java路线图
 
 ```
 JAVA
