--- a/_posts/2018-08-19-隐私权政策.md
+++ b/_posts/2018-08-19-隐私权政策.md
@@ -1,117 +1,125 @@
 ---
 layout: post
 date: 2018-08-19 2:57
-title: ÒşË½Õş²ß
+title: éšç§æ”¿ç­–
 categories: Privacy-policy
 tags: Privacy policy
 ---
-					ÒşË½Õş²ß
+* content
+{:toc}
 
-±¾Ó¦ÓÃ×ğÖØ²¢±£»¤ËùÓĞÊ¹ÓÃ·şÎñÓÃ»§µÄ¸öÈËÒşË½È¨¡£ÎªÁË¸øÄúÌá¹©¸ü×¼È·¡¢¸üÓĞ¸öĞÔ»¯µÄ·şÎñ£¬±¾Ó¦ÓÃ»á°´ÕÕ±¾ÒşË½È¨Õş²ßµÄ¹æ¶¨Ê¹ÓÃºÍÅûÂ¶ÄúµÄ¸öÈËĞÅÏ¢¡£µ«±¾Ó¦ÓÃ½«ÒÔ¸ß¶ÈµÄÇÚÃã¡¢ÉóÉ÷ÒåÎñ¶Ô´ıÕâĞ©ĞÅÏ¢¡£³ı±¾ÒşË½È¨Õş²ßÁíÓĞ¹æ¶¨Íâ£¬ÔÚÎ´Õ÷µÃÄúÊÂÏÈĞí¿ÉµÄÇé¿öÏÂ£¬±¾Ó¦ÓÃ²»»á½«ÕâĞ©ĞÅÏ¢¶ÔÍâÅûÂ¶»òÏòµÚÈı·½Ìá¹©¡£±¾Ó¦ÓÃ»á²»Ê±¸üĞÂ±¾ÒşË½È¨Õş²ß¡£ ÄúÔÚÍ¬Òâ±¾Ó¦ÓÃ·şÎñÊ¹ÓÃĞ­ÒéÖ®Ê±£¬¼´ÊÓÎªÄúÒÑ¾­Í¬Òâ±¾ÒşË½È¨Õş²ßÈ«²¿ÄÚÈİ¡£±¾ÒşË½È¨Õş²ßÊôÓÚ±¾Ó¦ÓÃ·şÎñÊ¹ÓÃĞ­Òé²»¿É·Ö¸îµÄÒ»²¿·Ö¡£
-
-1. ÊÊÓÃ·¶Î§
-
-(a) ÔÚÄú×¢²á±¾Ó¦ÓÃÕÊºÅÊ±£¬Äú¸ù¾İ±¾Ó¦ÓÃÒªÇóÌá¹©µÄ¸öÈË×¢²áĞÅÏ¢£»
-
-(b) ÔÚÄúÊ¹ÓÃ±¾Ó¦ÓÃÍøÂç·şÎñ£¬»ò·ÃÎÊ±¾Ó¦ÓÃÆ½Ì¨ÍøÒ³Ê±£¬±¾Ó¦ÓÃ×Ô¶¯½ÓÊÕ²¢¼ÇÂ¼µÄÄúµÄä¯ÀÀÆ÷ºÍ¼ÆËã»úÉÏµÄĞÅÏ¢£¬°üÀ¨µ«²»ÏŞÓÚÄúµÄIPµØÖ·¡¢ä¯ÀÀÆ÷µÄÀàĞÍ¡¢Ê¹ÓÃµÄÓïÑÔ¡¢·ÃÎÊÈÕÆÚºÍÊ±¼ä¡¢ÈíÓ²¼şÌØÕ÷ĞÅÏ¢¼°ÄúĞèÇóµÄÍøÒ³¼ÇÂ¼µÈÊı¾İ£»
-
-(c) ±¾Ó¦ÓÃÍ¨¹ıºÏ·¨Í¾¾¶´ÓÉÌÒµ»ï°é´¦È¡µÃµÄÓÃ»§¸öÈËÊı¾İ¡£
-
-ÄúÁË½â²¢Í¬Òâ£¬ÒÔÏÂĞÅÏ¢²»ÊÊÓÃ±¾ÒşË½È¨Õş²ß£º
-
-(a) ÄúÔÚÊ¹ÓÃ±¾Ó¦ÓÃÆ½Ì¨Ìá¹©µÄËÑË÷·şÎñÊ±ÊäÈëµÄ¹Ø¼ü×ÖĞÅÏ¢£»
-
-(b) ±¾Ó¦ÓÃÊÕ¼¯µ½µÄÄúÔÚ±¾Ó¦ÓÃ·¢²¼µÄÓĞ¹ØĞÅÏ¢Êı¾İ£¬°üÀ¨µ«²»ÏŞÓÚ²ÎÓë»î¶¯¡¢³É½»ĞÅÏ¢¼°ÆÀ¼ÛÏêÇé£»
-
-(c) Î¥·´·¨ÂÉ¹æ¶¨»òÎ¥·´±¾Ó¦ÓÃ¹æÔòĞĞÎª¼°±¾Ó¦ÓÃÒÑ¶ÔÄú²ÉÈ¡µÄ´ëÊ©¡£
-
-2. ĞÅÏ¢Ê¹ÓÃ
-
-(a)±¾Ó¦ÓÃ²»»áÏòÈÎºÎÎŞ¹ØµÚÈı·½Ìá¹©¡¢³öÊÛ¡¢³ö×â¡¢·ÖÏí»ò½»Ò×ÄúµÄ¸öÈËĞÅÏ¢£¬³ı·ÇÊÂÏÈµÃµ½ÄúµÄĞí¿É£¬»ò¸ÃµÚÈı·½ºÍ±¾Ó¦ÓÃ£¨º¬±¾Ó¦ÓÃ¹ØÁª¹«Ë¾£©µ¥¶À»ò¹²Í¬ÎªÄúÌá¹©·şÎñ£¬ÇÒÔÚ¸Ã·şÎñ½áÊøºó£¬Æä½«±»½ûÖ¹·ÃÎÊ°üÀ¨ÆäÒÔÇ°ÄÜ¹»·ÃÎÊµÄËùÓĞÕâĞ©×ÊÁÏ¡£
-
-(b) ±¾Ó¦ÓÃÒà²»ÔÊĞíÈÎºÎµÚÈı·½ÒÔÈÎºÎÊÖ¶ÎÊÕ¼¯¡¢±à¼­¡¢³öÊÛ»òÕßÎŞ³¥´«²¥ÄúµÄ¸öÈËĞÅÏ¢¡£ÈÎºÎ±¾Ó¦ÓÃÆ½Ì¨ÓÃ»§Èç´ÓÊÂÉÏÊö»î¶¯£¬Ò»¾­·¢ÏÖ£¬±¾Ó¦ÓÃÓĞÈ¨Á¢¼´ÖÕÖ¹Óë¸ÃÓÃ»§µÄ·şÎñĞ­Òé¡£
-
-(c) Îª·şÎñÓÃ»§µÄÄ¿µÄ£¬±¾Ó¦ÓÃ¿ÉÄÜÍ¨¹ıÊ¹ÓÃÄúµÄ¸öÈËĞÅÏ¢£¬ÏòÄúÌá¹©Äú¸ĞĞËÈ¤µÄĞÅÏ¢£¬°üÀ¨µ«²»ÏŞÓÚÏòÄú·¢³ö²úÆ·ºÍ·şÎñĞÅÏ¢£¬»òÕßÓë±¾Ó¦ÓÃºÏ×÷»ï°é¹²ÏíĞÅÏ¢ÒÔ±ãËûÃÇÏòÄú·¢ËÍÓĞ¹ØÆä²úÆ·ºÍ·şÎñµÄĞÅÏ¢£¨ºóÕßĞèÒªÄúµÄÊÂÏÈÍ¬Òâ£©¡£
-
-3. ĞÅÏ¢ÅûÂ¶
-
-ÔÚÈçÏÂÇé¿öÏÂ£¬±¾Ó¦ÓÃ½«ÒÀ¾İÄúµÄ¸öÈËÒâÔ¸»ò·¨ÂÉµÄ¹æ¶¨È«²¿»ò²¿·ÖµÄÅûÂ¶ÄúµÄ¸öÈËĞÅÏ¢£º
-
-(a) ¾­ÄúÊÂÏÈÍ¬Òâ£¬ÏòµÚÈı·½ÅûÂ¶£»
-
-(b)ÎªÌá¹©ÄúËùÒªÇóµÄ²úÆ·ºÍ·şÎñ£¬¶ø±ØĞëºÍµÚÈı·½·ÖÏíÄúµÄ¸öÈËĞÅÏ¢£»
-
-(c) ¸ù¾İ·¨ÂÉµÄÓĞ¹Ø¹æ¶¨£¬»òÕßĞĞÕş»òË¾·¨»ú¹¹µÄÒªÇó£¬ÏòµÚÈı·½»òÕßĞĞÕş¡¢Ë¾·¨»ú¹¹ÅûÂ¶£»
-
-(d) ÈçÄú³öÏÖÎ¥·´ÖĞ¹úÓĞ¹Ø·¨ÂÉ¡¢·¨¹æ»òÕß±¾Ó¦ÓÃ·şÎñĞ­Òé»òÏà¹Ø¹æÔòµÄÇé¿ö£¬ĞèÒªÏòµÚÈı·½ÅûÂ¶£»
-
-(e) ÈçÄúÊÇÊÊ¸ñµÄÖªÊ¶²úÈ¨Í¶ËßÈË²¢ÒÑÌáÆğÍ¶Ëß£¬Ó¦±»Í¶ËßÈËÒªÇó£¬Ïò±»Í¶ËßÈËÅûÂ¶£¬ÒÔ±ãË«·½´¦Àí¿ÉÄÜµÄÈ¨Àû¾À·×£»
-
-(f) ÔÚ±¾Ó¦ÓÃÆ½Ì¨ÉÏ´´½¨µÄÄ³Ò»½»Ò×ÖĞ£¬Èç½»Ò×ÈÎºÎÒ»·½ÂÄĞĞ»ò²¿·ÖÂÄĞĞÁË½»Ò×ÒåÎñ²¢Ìá³öĞÅÏ¢ÅûÂ¶ÇëÇóµÄ£¬±¾Ó¦ÓÃÓĞÈ¨¾ö¶¨Ïò¸ÃÓÃ»§Ìá¹©Æä½»Ò×¶Ô·½µÄÁªÂç·½Ê½µÈ±ØÒªĞÅÏ¢£¬ÒÔ´Ù³É½»Ò×µÄÍê³É»ò¾À·×µÄ½â¾ö¡£
-
-(g) ÆäËü±¾Ó¦ÓÃ¸ù¾İ·¨ÂÉ¡¢·¨¹æ»òÕßÍøÕ¾Õş²ßÈÏÎªºÏÊÊµÄÅûÂ¶¡£
-
-4. ĞÅÏ¢´æ´¢ºÍ½»»»
-
-±¾Ó¦ÓÃÊÕ¼¯µÄÓĞ¹ØÄúµÄĞÅÏ¢ºÍ×ÊÁÏ½«±£´æÔÚ±¾Ó¦ÓÃ¼°£¨»ò£©Æä¹ØÁª¹«Ë¾µÄ·şÎñÆ÷ÉÏ£¬ÕâĞ©ĞÅÏ¢ºÍ×ÊÁÏ¿ÉÄÜ´«ËÍÖÁÄúËùÔÚ¹ú¼Ò¡¢µØÇø»ò±¾Ó¦ÓÃÊÕ¼¯ĞÅÏ¢ºÍ×ÊÁÏËùÔÚµØµÄ¾³Íâ²¢ÔÚ¾³Íâ±»·ÃÎÊ¡¢´æ´¢ºÍÕ¹Ê¾¡£
-
-5. CookieµÄÊ¹ÓÃ
-
-(a) ÔÚÄúÎ´¾Ü¾ø½ÓÊÜcookiesµÄÇé¿öÏÂ£¬±¾Ó¦ÓÃ»áÔÚÄúµÄ¼ÆËã»úÉÏÉè¶¨»òÈ¡ÓÃcookies £¬ÒÔ±ãÄúÄÜµÇÂ¼»òÊ¹ÓÃÒÀÀµÓÚcookiesµÄ±¾Ó¦ÓÃÆ½Ì¨·şÎñ»ò¹¦ÄÜ¡£±¾Ó¦ÓÃÊ¹ÓÃcookies¿ÉÎªÄúÌá¹©¸ü¼ÓÖÜµ½µÄ¸öĞÔ»¯·şÎñ£¬°üÀ¨ÍÆ¹ã·şÎñ¡£
-
-(b) ÄúÓĞÈ¨Ñ¡Ôñ½ÓÊÜ»ò¾Ü¾ø½ÓÊÜcookies¡£Äú¿ÉÒÔÍ¨¹ıĞŞ¸Ää¯ÀÀÆ÷ÉèÖÃµÄ·½Ê½¾Ü¾ø½ÓÊÜcookies¡£µ«Èç¹ûÄúÑ¡Ôñ¾Ü¾ø½ÓÊÜcookies£¬ÔòÄú¿ÉÄÜÎŞ·¨µÇÂ¼»òÊ¹ÓÃÒÀÀµÓÚcookiesµÄ±¾Ó¦ÓÃÍøÂç·şÎñ»ò¹¦ÄÜ¡£
-
-(c) Í¨¹ı±¾Ó¦ÓÃËùÉècookiesËùÈ¡µÃµÄÓĞ¹ØĞÅÏ¢£¬½«ÊÊÓÃ±¾Õş²ß¡£
-
-6. ĞÅÏ¢°²È«
-
-(a) ±¾Ó¦ÓÃÕÊºÅ¾ùÓĞ°²È«±£»¤¹¦ÄÜ£¬ÇëÍ×ÉÆ±£¹ÜÄúµÄÓÃ»§Ãû¼°ÃÜÂëĞÅÏ¢¡£±¾Ó¦ÓÃ½«Í¨¹ı¶ÔÓÃ»§ÃÜÂë½øĞĞ¼ÓÃÜµÈ°²È«´ëÊ©È·±£ÄúµÄĞÅÏ¢²»¶ªÊ§£¬²»±»ÀÄÓÃºÍ±äÔì¡£¾¡¹ÜÓĞÇ°Êö°²È«´ëÊ©£¬µ«Í¬Ê±Ò²ÇëÄú×¢ÒâÔÚĞÅÏ¢ÍøÂçÉÏ²»´æÔÚ¡°ÍêÉÆµÄ°²È«´ëÊ©¡±¡£
-
-(b) ÔÚÊ¹ÓÃ±¾Ó¦ÓÃÍøÂç·şÎñ½øĞĞÍøÉÏ½»Ò×Ê±£¬Äú²»¿É±ÜÃâµÄÒªÏò½»Ò×¶Ô·½»òÇ±ÔÚµÄ½»Ò×¶Ô
-
-7.±¾ÒşË½Õş²ßµÄ¸ü¸Ä
-
-(a)Èç¹û¾ö¶¨¸ü¸ÄÒşË½Õş²ß£¬ÎÒÃÇ»áÔÚ±¾Õş²ßÖĞ¡¢±¾¹«Ë¾ÍøÕ¾ÖĞÒÔ¼°ÎÒÃÇÈÏÎªÊÊµ±µÄÎ»ÖÃ·¢²¼ÕâĞ©¸ü¸Ä£¬ÒÔ±ãÄúÁË½âÎÒÃÇÈçºÎÊÕ¼¯¡¢Ê¹ÓÃÄúµÄ¸öÈËĞÅÏ¢£¬ÄÄĞ©ÈË¿ÉÒÔ·ÃÎÊÕâĞ©ĞÅÏ¢£¬ÒÔ¼°ÔÚÊ²Ã´Çé¿öÏÂÎÒÃÇ»áÍ¸Â¶ÕâĞ©ĞÅÏ¢¡£
-
-(b)±¾¹«Ë¾±£ÁôËæÊ±ĞŞ¸Ä±¾Õş²ßµÄÈ¨Àû£¬Òò´ËÇë¾­³£²é¿´¡£Èç¶Ô±¾Õş²ß×÷³öÖØ´ó¸ü¸Ä£¬±¾¹«Ë¾»áÍ¨¹ıÍøÕ¾Í¨ÖªµÄĞÎÊ½¸æÖª¡£
-
-·½ÅûÂ¶×Ô¼ºµÄ¸öÈËĞÅÏ¢£¬ÈçÁªÂç·½Ê½»òÕßÓÊÕşµØÖ·¡£ÇëÄúÍ×ÉÆ±£»¤×Ô¼ºµÄ¸öÈËĞÅÏ¢£¬½öÔÚ±ØÒªµÄÇéĞÎÏÂÏòËûÈËÌá¹©¡£ÈçÄú·¢ÏÖ×Ô¼ºµÄ¸öÈËĞÅÏ¢Ğ¹ÃÜ£¬ÓÈÆäÊÇ±¾Ó¦ÓÃÓÃ»§Ãû¼°ÃÜÂë·¢ÉúĞ¹Â¶£¬ÇëÄúÁ¢¼´ÁªÂç±¾Ó¦ÓÃ¿Í·ş£¬ÒÔ±ã±¾Ó¦ÓÃ²ÉÈ¡ÏàÓ¦´ëÊ©¡£
+##  					éšç§æ”¿ç­–
 
 
+æœ¬åº”ç”¨å°Šé‡å¹¶ä¿æŠ¤æ‰€æœ‰ä½¿ç”¨æœåŠ¡ç”¨æˆ·çš„ä¸ªäººéšç§æƒã€‚ä¸ºäº†ç»™æ‚¨æä¾›æ›´å‡†ç¡®ã€æ›´æœ‰ä¸ªæ€§åŒ–çš„æœåŠ¡ï¼Œæœ¬åº”ç”¨ä¼šæŒ‰ç…§æœ¬éšç§æƒæ”¿ç­–çš„è§„å®šä½¿ç”¨å’ŒæŠ«éœ²æ‚¨çš„ä¸ªäººä¿¡æ¯ã€‚ä½†æœ¬åº”ç”¨å°†ä»¥é«˜åº¦çš„å‹¤å‹‰ã€å®¡æ…ä¹‰åŠ¡å¯¹å¾…è¿™äº›ä¿¡æ¯ã€‚é™¤æœ¬éšç§æƒæ”¿ç­–å¦æœ‰è§„å®šå¤–ï¼Œåœ¨æœªå¾å¾—æ‚¨äº‹å…ˆè®¸å¯çš„æƒ…å†µä¸‹ï¼Œæœ¬åº”ç”¨ä¸ä¼šå°†è¿™äº›ä¿¡æ¯å¯¹å¤–æŠ«éœ²æˆ–å‘ç¬¬ä¸‰æ–¹æä¾›ã€‚æœ¬åº”ç”¨ä¼šä¸æ—¶æ›´æ–°æœ¬éšç§æƒæ”¿ç­–ã€‚ æ‚¨åœ¨åŒæ„æœ¬åº”ç”¨æœåŠ¡ä½¿ç”¨åè®®ä¹‹æ—¶ï¼Œå³è§†ä¸ºæ‚¨å·²ç»åŒæ„æœ¬éšç§æƒæ”¿ç­–å…¨éƒ¨å†…å®¹ã€‚æœ¬éšç§æƒæ”¿ç­–å±äºæœ¬åº”ç”¨æœåŠ¡ä½¿ç”¨åè®®ä¸å¯åˆ†å‰²çš„ä¸€éƒ¨åˆ†ã€‚
 
-				Privacy policy
+1. é€‚ç”¨èŒƒå›´
+
+(a) åœ¨æ‚¨æ³¨å†Œæœ¬åº”ç”¨å¸å·æ—¶ï¼Œæ‚¨æ ¹æ®æœ¬åº”ç”¨è¦æ±‚æä¾›çš„ä¸ªäººæ³¨å†Œä¿¡æ¯ï¼›
+
+(b) åœ¨æ‚¨ä½¿ç”¨æœ¬åº”ç”¨ç½‘ç»œæœåŠ¡ï¼Œæˆ–è®¿é—®æœ¬åº”ç”¨å¹³å°ç½‘é¡µæ—¶ï¼Œæœ¬åº”ç”¨è‡ªåŠ¨æ¥æ”¶å¹¶è®°å½•çš„æ‚¨çš„æµè§ˆå™¨å’Œè®¡ç®—æœºä¸Šçš„ä¿¡æ¯ï¼ŒåŒ…æ‹¬ä½†ä¸é™äºæ‚¨çš„IPåœ°å€ã€æµè§ˆå™¨çš„ç±»å‹ã€ä½¿ç”¨çš„è¯­è¨€ã€è®¿é—®æ—¥æœŸå’Œæ—¶é—´ã€è½¯ç¡¬ä»¶ç‰¹å¾ä¿¡æ¯åŠæ‚¨éœ€æ±‚çš„ç½‘é¡µè®°å½•ç­‰æ•°æ®ï¼›
+
+(c) æœ¬åº”ç”¨é€šè¿‡åˆæ³•é€”å¾„ä»å•†ä¸šä¼™ä¼´å¤„å–å¾—çš„ç”¨æˆ·ä¸ªäººæ•°æ®ã€‚
+
+æ‚¨äº†è§£å¹¶åŒæ„ï¼Œä»¥ä¸‹ä¿¡æ¯ä¸é€‚ç”¨æœ¬éšç§æƒæ”¿ç­–ï¼š
+
+(a) æ‚¨åœ¨ä½¿ç”¨æœ¬åº”ç”¨å¹³å°æä¾›çš„æœç´¢æœåŠ¡æ—¶è¾“å…¥çš„å…³é”®å­—ä¿¡æ¯ï¼›
+
+(b) æœ¬åº”ç”¨æ”¶é›†åˆ°çš„æ‚¨åœ¨æœ¬åº”ç”¨å‘å¸ƒçš„æœ‰å…³ä¿¡æ¯æ•°æ®ï¼ŒåŒ…æ‹¬ä½†ä¸é™äºå‚ä¸æ´»åŠ¨ã€æˆäº¤ä¿¡æ¯åŠè¯„ä»·è¯¦æƒ…ï¼›
+
+(c) è¿åæ³•å¾‹è§„å®šæˆ–è¿åæœ¬åº”ç”¨è§„åˆ™è¡Œä¸ºåŠæœ¬åº”ç”¨å·²å¯¹æ‚¨é‡‡å–çš„æªæ–½ã€‚
+
+<!-- more -->
+
+1. ä¿¡æ¯ä½¿ç”¨
+
+(a)æœ¬åº”ç”¨ä¸ä¼šå‘ä»»ä½•æ— å…³ç¬¬ä¸‰æ–¹æä¾›ã€å‡ºå”®ã€å‡ºç§Ÿã€åˆ†äº«æˆ–äº¤æ˜“æ‚¨çš„ä¸ªäººä¿¡æ¯ï¼Œé™¤éäº‹å…ˆå¾—åˆ°æ‚¨çš„è®¸å¯ï¼Œæˆ–è¯¥ç¬¬ä¸‰æ–¹å’Œæœ¬åº”ç”¨ï¼ˆå«æœ¬åº”ç”¨å…³è”å…¬å¸ï¼‰å•ç‹¬æˆ–å…±åŒä¸ºæ‚¨æä¾›æœåŠ¡ï¼Œä¸”åœ¨è¯¥æœåŠ¡ç»“æŸåï¼Œå…¶å°†è¢«ç¦æ­¢è®¿é—®åŒ…æ‹¬å…¶ä»¥å‰èƒ½å¤Ÿè®¿é—®çš„æ‰€æœ‰è¿™äº›èµ„æ–™ã€‚
+
+(b) æœ¬åº”ç”¨äº¦ä¸å…è®¸ä»»ä½•ç¬¬ä¸‰æ–¹ä»¥ä»»ä½•æ‰‹æ®µæ”¶é›†ã€ç¼–è¾‘ã€å‡ºå”®æˆ–è€…æ— å¿ä¼ æ’­æ‚¨çš„ä¸ªäººä¿¡æ¯ã€‚ä»»ä½•æœ¬åº”ç”¨å¹³å°ç”¨æˆ·å¦‚ä»äº‹ä¸Šè¿°æ´»åŠ¨ï¼Œä¸€ç»å‘ç°ï¼Œæœ¬åº”ç”¨æœ‰æƒç«‹å³ç»ˆæ­¢ä¸è¯¥ç”¨æˆ·çš„æœåŠ¡åè®®ã€‚
+
+(c) ä¸ºæœåŠ¡ç”¨æˆ·çš„ç›®çš„ï¼Œæœ¬åº”ç”¨å¯èƒ½é€šè¿‡ä½¿ç”¨æ‚¨çš„ä¸ªäººä¿¡æ¯ï¼Œå‘æ‚¨æä¾›æ‚¨æ„Ÿå…´è¶£çš„ä¿¡æ¯ï¼ŒåŒ…æ‹¬ä½†ä¸é™äºå‘æ‚¨å‘å‡ºäº§å“å’ŒæœåŠ¡ä¿¡æ¯ï¼Œæˆ–è€…ä¸æœ¬åº”ç”¨åˆä½œä¼™ä¼´å…±äº«ä¿¡æ¯ä»¥ä¾¿ä»–ä»¬å‘æ‚¨å‘é€æœ‰å…³å…¶äº§å“å’ŒæœåŠ¡çš„ä¿¡æ¯ï¼ˆåè€…éœ€è¦æ‚¨çš„äº‹å…ˆåŒæ„ï¼‰ã€‚
+
+1. ä¿¡æ¯æŠ«éœ²
+
+åœ¨å¦‚ä¸‹æƒ…å†µä¸‹ï¼Œæœ¬åº”ç”¨å°†ä¾æ®æ‚¨çš„ä¸ªäººæ„æ„¿æˆ–æ³•å¾‹çš„è§„å®šå…¨éƒ¨æˆ–éƒ¨åˆ†çš„æŠ«éœ²æ‚¨çš„ä¸ªäººä¿¡æ¯ï¼š
+
+(a) ç»æ‚¨äº‹å…ˆåŒæ„ï¼Œå‘ç¬¬ä¸‰æ–¹æŠ«éœ²ï¼›
+
+(b)ä¸ºæä¾›æ‚¨æ‰€è¦æ±‚çš„äº§å“å’ŒæœåŠ¡ï¼Œè€Œå¿…é¡»å’Œç¬¬ä¸‰æ–¹åˆ†äº«æ‚¨çš„ä¸ªäººä¿¡æ¯ï¼›
+
+(c) æ ¹æ®æ³•å¾‹çš„æœ‰å…³è§„å®šï¼Œæˆ–è€…è¡Œæ”¿æˆ–å¸æ³•æœºæ„çš„è¦æ±‚ï¼Œå‘ç¬¬ä¸‰æ–¹æˆ–è€…è¡Œæ”¿ã€å¸æ³•æœºæ„æŠ«éœ²ï¼›
+
+(d) å¦‚æ‚¨å‡ºç°è¿åä¸­å›½æœ‰å…³æ³•å¾‹ã€æ³•è§„æˆ–è€…æœ¬åº”ç”¨æœåŠ¡åè®®æˆ–ç›¸å…³è§„åˆ™çš„æƒ…å†µï¼Œéœ€è¦å‘ç¬¬ä¸‰æ–¹æŠ«éœ²ï¼›
+
+(e) å¦‚æ‚¨æ˜¯é€‚æ ¼çš„çŸ¥è¯†äº§æƒæŠ•è¯‰äººå¹¶å·²æèµ·æŠ•è¯‰ï¼Œåº”è¢«æŠ•è¯‰äººè¦æ±‚ï¼Œå‘è¢«æŠ•è¯‰äººæŠ«éœ²ï¼Œä»¥ä¾¿åŒæ–¹å¤„ç†å¯èƒ½çš„æƒåˆ©çº çº·ï¼›
+
+(f) åœ¨æœ¬åº”ç”¨å¹³å°ä¸Šåˆ›å»ºçš„æŸä¸€äº¤æ˜“ä¸­ï¼Œå¦‚äº¤æ˜“ä»»ä½•ä¸€æ–¹å±¥è¡Œæˆ–éƒ¨åˆ†å±¥è¡Œäº†äº¤æ˜“ä¹‰åŠ¡å¹¶æå‡ºä¿¡æ¯æŠ«éœ²è¯·æ±‚çš„ï¼Œæœ¬åº”ç”¨æœ‰æƒå†³å®šå‘è¯¥ç”¨æˆ·æä¾›å…¶äº¤æ˜“å¯¹æ–¹çš„è”ç»œæ–¹å¼ç­‰å¿…è¦ä¿¡æ¯ï¼Œä»¥ä¿ƒæˆäº¤æ˜“çš„å®Œæˆæˆ–çº çº·çš„è§£å†³ã€‚
+
+(g) å…¶å®ƒæœ¬åº”ç”¨æ ¹æ®æ³•å¾‹ã€æ³•è§„æˆ–è€…ç½‘ç«™æ”¿ç­–è®¤ä¸ºåˆé€‚çš„æŠ«éœ²ã€‚
+
+1. ä¿¡æ¯å­˜å‚¨å’Œäº¤æ¢
+
+æœ¬åº”ç”¨æ”¶é›†çš„æœ‰å…³æ‚¨çš„ä¿¡æ¯å’Œèµ„æ–™å°†ä¿å­˜åœ¨æœ¬åº”ç”¨åŠï¼ˆæˆ–ï¼‰å…¶å…³è”å…¬å¸çš„æœåŠ¡å™¨ä¸Šï¼Œè¿™äº›ä¿¡æ¯å’Œèµ„æ–™å¯èƒ½ä¼ é€è‡³æ‚¨æ‰€åœ¨å›½å®¶ã€åœ°åŒºæˆ–æœ¬åº”ç”¨æ”¶é›†ä¿¡æ¯å’Œèµ„æ–™æ‰€åœ¨åœ°çš„å¢ƒå¤–å¹¶åœ¨å¢ƒå¤–è¢«è®¿é—®ã€å­˜å‚¨å’Œå±•ç¤ºã€‚
+
+1. Cookieçš„ä½¿ç”¨
+
+(a) åœ¨æ‚¨æœªæ‹’ç»æ¥å—cookiesçš„æƒ…å†µä¸‹ï¼Œæœ¬åº”ç”¨ä¼šåœ¨æ‚¨çš„è®¡ç®—æœºä¸Šè®¾å®šæˆ–å–ç”¨cookies ï¼Œä»¥ä¾¿æ‚¨èƒ½ç™»å½•æˆ–ä½¿ç”¨ä¾èµ–äºcookiesçš„æœ¬åº”ç”¨å¹³å°æœåŠ¡æˆ–åŠŸèƒ½ã€‚æœ¬åº”ç”¨ä½¿ç”¨cookieså¯ä¸ºæ‚¨æä¾›æ›´åŠ å‘¨åˆ°çš„ä¸ªæ€§åŒ–æœåŠ¡ï¼ŒåŒ…æ‹¬æ¨å¹¿æœåŠ¡ã€‚
+
+(b) æ‚¨æœ‰æƒé€‰æ‹©æ¥å—æˆ–æ‹’ç»æ¥å—cookiesã€‚æ‚¨å¯ä»¥é€šè¿‡ä¿®æ”¹æµè§ˆå™¨è®¾ç½®çš„æ–¹å¼æ‹’ç»æ¥å—cookiesã€‚ä½†å¦‚æœæ‚¨é€‰æ‹©æ‹’ç»æ¥å—cookiesï¼Œåˆ™æ‚¨å¯èƒ½æ— æ³•ç™»å½•æˆ–ä½¿ç”¨ä¾èµ–äºcookiesçš„æœ¬åº”ç”¨ç½‘ç»œæœåŠ¡æˆ–åŠŸèƒ½ã€‚
+
+(c) é€šè¿‡æœ¬åº”ç”¨æ‰€è®¾cookiesæ‰€å–å¾—çš„æœ‰å…³ä¿¡æ¯ï¼Œå°†é€‚ç”¨æœ¬æ”¿ç­–ã€‚
+
+1. ä¿¡æ¯å®‰å…¨
+
+(a) æœ¬åº”ç”¨å¸å·å‡æœ‰å®‰å…¨ä¿æŠ¤åŠŸèƒ½ï¼Œè¯·å¦¥å–„ä¿ç®¡æ‚¨çš„ç”¨æˆ·ååŠå¯†ç ä¿¡æ¯ã€‚æœ¬åº”ç”¨å°†é€šè¿‡å¯¹ç”¨æˆ·å¯†ç è¿›è¡ŒåŠ å¯†ç­‰å®‰å…¨æªæ–½ç¡®ä¿æ‚¨çš„ä¿¡æ¯ä¸ä¸¢å¤±ï¼Œä¸è¢«æ»¥ç”¨å’Œå˜é€ ã€‚å°½ç®¡æœ‰å‰è¿°å®‰å…¨æªæ–½ï¼Œä½†åŒæ—¶ä¹Ÿè¯·æ‚¨æ³¨æ„åœ¨ä¿¡æ¯ç½‘ç»œä¸Šä¸å­˜åœ¨â€œå®Œå–„çš„å®‰å…¨æªæ–½â€ã€‚
+
+(b) åœ¨ä½¿ç”¨æœ¬åº”ç”¨ç½‘ç»œæœåŠ¡è¿›è¡Œç½‘ä¸Šäº¤æ˜“æ—¶ï¼Œæ‚¨ä¸å¯é¿å…çš„è¦å‘äº¤æ˜“å¯¹æ–¹æˆ–æ½œåœ¨çš„äº¤æ˜“å¯¹
+
+7.æœ¬éšç§æ”¿ç­–çš„æ›´æ”¹
+
+(a)å¦‚æœå†³å®šæ›´æ”¹éšç§æ”¿ç­–ï¼Œæˆ‘ä»¬ä¼šåœ¨æœ¬æ”¿ç­–ä¸­ã€æœ¬å…¬å¸ç½‘ç«™ä¸­ä»¥åŠæˆ‘ä»¬è®¤ä¸ºé€‚å½“çš„ä½ç½®å‘å¸ƒè¿™äº›æ›´æ”¹ï¼Œä»¥ä¾¿æ‚¨äº†è§£æˆ‘ä»¬å¦‚ä½•æ”¶é›†ã€ä½¿ç”¨æ‚¨çš„ä¸ªäººä¿¡æ¯ï¼Œå“ªäº›äººå¯ä»¥è®¿é—®è¿™äº›ä¿¡æ¯ï¼Œä»¥åŠåœ¨ä»€ä¹ˆæƒ…å†µä¸‹æˆ‘ä»¬ä¼šé€éœ²è¿™äº›ä¿¡æ¯ã€‚
+
+(b)æœ¬å…¬å¸ä¿ç•™éšæ—¶ä¿®æ”¹æœ¬æ”¿ç­–çš„æƒåˆ©ï¼Œå› æ­¤è¯·ç»å¸¸æŸ¥çœ‹ã€‚å¦‚å¯¹æœ¬æ”¿ç­–ä½œå‡ºé‡å¤§æ›´æ”¹ï¼Œæœ¬å…¬å¸ä¼šé€šè¿‡ç½‘ç«™é€šçŸ¥çš„å½¢å¼å‘ŠçŸ¥ã€‚
+
+æ–¹æŠ«éœ²è‡ªå·±çš„ä¸ªäººä¿¡æ¯ï¼Œå¦‚è”ç»œæ–¹å¼æˆ–è€…é‚®æ”¿åœ°å€ã€‚è¯·æ‚¨å¦¥å–„ä¿æŠ¤è‡ªå·±çš„ä¸ªäººä¿¡æ¯ï¼Œä»…åœ¨å¿…è¦çš„æƒ…å½¢ä¸‹å‘ä»–äººæä¾›ã€‚å¦‚æ‚¨å‘ç°è‡ªå·±çš„ä¸ªäººä¿¡æ¯æ³„å¯†ï¼Œå°¤å…¶æ˜¯æœ¬åº”ç”¨ç”¨æˆ·ååŠå¯†ç å‘ç”Ÿæ³„éœ²ï¼Œè¯·æ‚¨ç«‹å³è”ç»œæœ¬åº”ç”¨å®¢æœï¼Œä»¥ä¾¿æœ¬åº”ç”¨é‡‡å–ç›¸åº”æªæ–½ã€‚
+
+
+
+## 				Privacy policy
+
 This application respects and protects the personal privacy of all users using the service.In order to provide you with more accurate and personalized services, the app will use and disclose your personal information in accordance with the provisions of this privacy policy.However, this application will treat such information with a high degree of care and due diligence.Unless otherwise provided in this privacy policy, the app will not disclose or provide such information to any third party without your prior permission.This application will update this privacy policy from time to time.When you agree to the usage agreement of this application service, you shall be deemed to have agreed to the entire content of this privacy policy.This privacy policy is an integral part of the application service usage agreement.
+
 1. Scope of application
-(a) the personal registration information provided by you according to the requirements of the app when you register the account;
-(b) application in your use of this web service, or access to this web application platform, the application automatically receive and record your browser and computer information, including but not limited to your IP address, browser type, the use of language, visit date and time, software and hardware feature information and the page you need to record data such as;
-(c) user personal data obtained through legal means from business partners in this application.
-You understand and agree that the following information is not applicable to this privacy policy:
-(a) the keyword information you enter when using the search service provided by the application platform;
-(b) the relevant information data collected by the app, including but not limited to participation activities, transaction information and evaluation details;
-(c) act in violation of the law or the rules of this application and the measures that the application has taken against you.
+   (a) the personal registration information provided by you according to the requirements of the app when you register the account;
+   (b) application in your use of this web service, or access to this web application platform, the application automatically receive and record your browser and computer information, including but not limited to your IP address, browser type, the use of language, visit date and time, software and hardware feature information and the page you need to record data such as;
+   (c) user personal data obtained through legal means from business partners in this application.
+   You understand and agree that the following information is not applicable to this privacy policy:
+   (a) the keyword information you enter when using the search service provided by the application platform;
+   (b) the relevant information data collected by the app, including but not limited to participation activities, transaction information and evaluation details;
+   (c) act in violation of the law or the rules of this application and the measures that the application has taken against you.
 2. Use of information
-(a) the application won't come to any irrelevant third party to provide, sell, rent, share or trade your personal information, unless get your permission in advance, or the third party and the application of this application (including affiliates) alone or together to provide the service for you, and at the end of the service, it will be banned from access to be able to access all the information including its before.
-(b) the application also does not allow any third party to collect, edit, sell or disseminate your personal information by any means.If any user of the application platform engages in the above activities, the application shall have the right to immediately terminate the service agreement with that user.
-(c) for the purpose of service users, the application may be through the use of your personal information, provide you with the information you have interested in, including but not limited to sent you product and service information, or to share information with this application partners so that they send you information about its products and services, which need your prior consent).
+   (a) the application won't come to any irrelevant third party to provide, sell, rent, share or trade your personal information, unless get your permission in advance, or the third party and the application of this application (including affiliates) alone or together to provide the service for you, and at the end of the service, it will be banned from access to be able to access all the information including its before.
+   (b) the application also does not allow any third party to collect, edit, sell or disseminate your personal information by any means.If any user of the application platform engages in the above activities, the application shall have the right to immediately terminate the service agreement with that user.
+   (c) for the purpose of service users, the application may be through the use of your personal information, provide you with the information you have interested in, including but not limited to sent you product and service information, or to share information with this application partners so that they send you information about its products and services, which need your prior consent).
 3. Information disclosure
-The application will disclose all or part of your personal information in accordance with your personal wishes or legal requirements:
-(a) disclose to a third party with your prior consent;
-(b) you must share your personal information with third parties in order to provide the products and services you require;
-(c) disclose to a third party or to an administrative or judicial body in accordance with the relevant provisions of the law or with the requirements of the administrative or judicial body;
-(d) if you violate relevant Chinese laws and regulations or this application service agreement or relevant rules, you need to disclose to a third party;
-(e) if you are the qualified complainant of intellectual property and have filed a complaint, you shall, at the request of the complainant, disclose it to the complainant so that the parties may settle a possible dispute of rights;
-(f) in a transaction created on the application platform, if either party of the transaction performs or partially performs its transaction obligations and makes a request for information disclosure, the application shall have the right to provide such necessary information as the contact method of the other party of the transaction to the user to facilitate the completion of the transaction or the settlement of the dispute.
-(g) other disclosures as deemed appropriate by laws, regulations or website policies.
+   The application will disclose all or part of your personal information in accordance with your personal wishes or legal requirements:
+   (a) disclose to a third party with your prior consent;
+   (b) you must share your personal information with third parties in order to provide the products and services you require;
+   (c) disclose to a third party or to an administrative or judicial body in accordance with the relevant provisions of the law or with the requirements of the administrative or judicial body;
+   (d) if you violate relevant Chinese laws and regulations or this application service agreement or relevant rules, you need to disclose to a third party;
+   (e) if you are the qualified complainant of intellectual property and have filed a complaint, you shall, at the request of the complainant, disclose it to the complainant so that the parties may settle a possible dispute of rights;
+   (f) in a transaction created on the application platform, if either party of the transaction performs or partially performs its transaction obligations and makes a request for information disclosure, the application shall have the right to provide such necessary information as the contact method of the other party of the transaction to the user to facilitate the completion of the transaction or the settlement of the dispute.
+   (g) other disclosures as deemed appropriate by laws, regulations or website policies.
 4. Information storage and exchange
-The information and data collected by the application regarding you will be kept on the server of the application and/or its affiliates, which may be sent to your country, region or the location where the application collects information and data and may be accessed, stored and displayed abroad.
+   The information and data collected by the application regarding you will be kept on the server of the application and/or its affiliates, which may be sent to your country, region or the location where the application collects information and data and may be accessed, stored and displayed abroad.
 5. Use of cookies
-(a) if you do not refuse to accept cookies, the app will set or access cookies on your computer so that you can log in or use services or functions of the application platform that depend on cookies.The application USES cookies to provide you with more thoughtful personalized services, including promotional services.
-(b) you have the option to accept or reject cookies.You can reject cookies by modifying your browser Settings.But if you choose to reject cookies, you may not be able to log in or use your own network service or function that depends on cookies.
-(c) the relevant information obtained through cookies set by this application will be applicable to this policy.
+   (a) if you do not refuse to accept cookies, the app will set or access cookies on your computer so that you can log in or use services or functions of the application platform that depend on cookies.The application USES cookies to provide you with more thoughtful personalized services, including promotional services.
+   (b) you have the option to accept or reject cookies.You can reject cookies by modifying your browser Settings.But if you choose to reject cookies, you may not be able to log in or use your own network service or function that depends on cookies.
+   (c) the relevant information obtained through cookies set by this application will be applicable to this policy.
 6. Information security
-(a) the account number of this application has the function of security protection, please properly keep your user name and password information.This application will ensure that your information is not lost, abused or altered through security measures such as encrypting user passwords.Despite the aforementioned security measures, please note that there is no "perfect security measures" on the information network.
-(b) when using this application network service for online transactions, you inevitably have to trade with the other party or potential transaction pairs
+   (a) the account number of this application has the function of security protection, please properly keep your user name and password information.This application will ensure that your information is not lost, abused or altered through security measures such as encrypting user passwords.Despite the aforementioned security measures, please note that there is no "perfect security measures" on the information network.
+   (b) when using this application network service for online transactions, you inevitably have to trade with the other party or potential transaction pairs
 7. Changes to this privacy policy
-(a) if we decide to change our privacy policy, we will publish the changes in this policy, on our website, and wherever we see fit so that you know how we collect and use your personal information, who can access it, and under what circumstances we will disclose it.
-(b) the company reserves the right to amend this policy at any time, so please check it frequently.If any major change is made to this policy, the company will notify through the website.
-Party a shall disclose personal information, such as contact information or postal address.Please protect your personal information and provide it to others only if necessary.If you find that your personal information is leaked, especially the user name and password of the app, please contact the app's customer service immediately, so that the app can take appropriate measures.
+   (a) if we decide to change our privacy policy, we will publish the changes in this policy, on our website, and wherever we see fit so that you know how we collect and use your personal information, who can access it, and under what circumstances we will disclose it.
+   (b) the company reserves the right to amend this policy at any time, so please check it frequently.If any major change is made to this policy, the company will notify through the website.
+   Party a shall disclose personal information, such as contact information or postal address.Please protect your personal information and provide it to others only if necessary.If you find that your personal information is leaked, especially the user name and password of the app, please contact the app's customer service immediately, so that the app can take appropriate measures. 
