modified more and post TAG
modified more and post TAG

--- a/_posts/2020-03-10-涂鸦功能.md
+++ b/_posts/2020-03-10-涂鸦功能.md
@@ -1,10 +1,10 @@
 ---
 layout:  post
-title:  "涂鸦功能"
+title: "涂鸦功能"
 date:  2020-03-10 11:44:00 +0800
 categories: paint 涂鸦 截屏
-tags:  paint 涂鸦 截屏
-author：林建有
+tags: paint 涂鸦 截屏
+author: 林建有
 ---
 * content
 {:toc}
