--- a/_posts/2020-03-31日-安卓Target29API升级修改点.md
+++ b/_posts/2020-03-31日-安卓Target29API升级修改点.md
@@ -1,11 +1,10 @@
 ---
-
 layout:  post
 title:  "Target29修改点"
 date:  2020-03-31 16:16:00 +0800
 categories: 应用Android10升级 target29
 tags:  Android API target29
-author：林建有
+author: 林建有
 ---
 * content
 {:toc}
@@ -23,7 +22,7 @@ Android 10 引入了大量变更
 
 
 
-
+<!-- more -->
 
 # 外部存储访问权限范围限定为应用文件和媒体
 
