--- a/_posts/2021-06-04-广告模块详解mopub广告等.md
+++ b/_posts/2021-06-04-广告模块详解mopub广告等.md
@@ -2,9 +2,9 @@
 layout:  post
 title:  "广告模块详解mopub广告等"
 date:  2021-06-04 15:18:00 +0800
-categories:广告模块 mopub
+categories: 广告模块 mopub
 tags:  mopub 广告模块
-author：林建有
+author: 林建有
 ---
 * content
 {:toc}
@@ -32,7 +32,7 @@ author：林建有
 
   - `Mopub`接入的广告类型有：原生广告`NativeAd`，激励广告`MoPubReward`，插屏广告`MoPubInterstitial`
 
-
+<!-- more -->
 
 ## 广告模块架构
 
@@ -280,6 +280,6 @@ fun showInterstitialAd(context: Context, pageIndex: Int) {
    }
 ```
 
-#### mopub激励广告 
+#### mopub激励广告
 
 详情看`RewardAdDialogFragment.java`类型，该类集成了`Admob`，`Facebook`，`mopub`三家平台的激励广告逻辑
