--- a/_posts/2020-6-4-前台服务和通知相关排查.md
+++ b/_posts/2020-6-4-前台服务和通知相关排查.md
@@ -3,8 +3,8 @@ layout:  post
 title:  "Android 前台服务和通知相关排查"
 date:  2020-6-4 11:40:00 +0800
 categories:  Android ForegroundService 前台服务 通知
-tags:  Android  ForegroundService 前台服务 通知
-author：林建有
+tags: Android  ForegroundService 前台服务 通知
+author: 林建有
 ---
 * content
 {:toc}
