修改image的引用地址为根目录的/asset/image/下的相对路径，base_url会自动添加

--- a/_posts/2025-01-15-Python爬虫之入门保姆级教程,学不会我去你家刷厕所.md
+++ b/_posts/2025-01-15-Python爬虫之入门保姆级教程,学不会我去你家刷厕所.md
@@ -4,7 +4,7 @@ date: 2025-01-15 11:43:18 +0800
 categories: [Python专区,爬虫笔记]
 tags: [python,爬虫]
 image:
-  path: ../../assets/images/a351894f8eeafe3ce746e61f44ab7515.png
+  path: /assets/images/a351894f8eeafe3ce746e61f44ab7515.png
   alt: Python爬虫之入门保姆级教程,学不会我去你家刷厕所
 ---
 <div class="blog-content-box">
@@ -14,6 +14,41 @@ image:
     <h1 class="title-article" id="articleContentId">
      Python爬虫之入门保姆级教程，学不会我去你家刷厕所
     </h1>
+   </div>
+   <div class="ai-article-tag" id="ai-article-tag">
+    <div class="ai-article-tag-box">
+     <p class="ai-article-tag-item-active">
+      <img alt="" class="item-target" src="/assets/images/b4710ce955a74637b3a98a9d5b89633a.png"/>
+     </p>
+     <a class="ai-article-tag-item" data-report-click='{"spm":"3001.10231","extra":{"searchword":"Python爬虫"}}' data-report-query="spm=1001.2101.3001.10231" data-report-view='{"spm":"3001.10231","extra":{"searchword":"Python爬虫"}}' href="https://so.csdn.net/so/search/s.do?q=Python%E7%88%AC%E8%99%AB&amp;t=all&amp;o=vip&amp;s=&amp;l=&amp;f=&amp;viparticle=&amp;from_tracking_code=tag_word&amp;from_code=app_blog_art" target="_blank">
+      <span>
+       Python爬虫
+      </span>
+     </a>
+     <a class="ai-article-tag-item" data-report-click='{"spm":"3001.10231","extra":{"searchword":"requests库"}}' data-report-query="spm=1001.2101.3001.10231" data-report-view='{"spm":"3001.10231","extra":{"searchword":"requests库"}}' href="https://so.csdn.net/so/search/s.do?q=requests%E5%BA%93&amp;t=all&amp;o=vip&amp;s=&amp;l=&amp;f=&amp;viparticle=&amp;from_tracking_code=tag_word&amp;from_code=app_blog_art" target="_blank">
+      <span>
+       requests库
+      </span>
+     </a>
+     <a class="ai-article-tag-item" data-report-click='{"spm":"3001.10231","extra":{"searchword":"正则表达式"}}' data-report-query="spm=1001.2101.3001.10231" data-report-view='{"spm":"3001.10231","extra":{"searchword":"正则表达式"}}' href="https://so.csdn.net/so/search/s.do?q=%E6%AD%A3%E5%88%99%E8%A1%A8%E8%BE%BE%E5%BC%8F&amp;t=all&amp;o=vip&amp;s=&amp;l=&amp;f=&amp;viparticle=&amp;from_tracking_code=tag_word&amp;from_code=app_blog_art" target="_blank">
+      <span>
+       正则表达式
+      </span>
+     </a>
+     <a class="ai-article-tag-item" data-report-click='{"spm":"3001.10231","extra":{"searchword":"图片下载"}}' data-report-query="spm=1001.2101.3001.10231" data-report-view='{"spm":"3001.10231","extra":{"searchword":"图片下载"}}' href="https://so.csdn.net/so/search/s.do?q=%E5%9B%BE%E7%89%87%E4%B8%8B%E8%BD%BD&amp;t=all&amp;o=vip&amp;s=&amp;l=&amp;f=&amp;viparticle=&amp;from_tracking_code=tag_word&amp;from_code=app_blog_art" target="_blank">
+      <span>
+       图片下载
+      </span>
+     </a>
+     <a class="ai-article-tag-item" data-report-click='{"spm":"3001.10231","extra":{"searchword":"彼岸图网"}}' data-report-query="spm=1001.2101.3001.10231" data-report-view='{"spm":"3001.10231","extra":{"searchword":"彼岸图网"}}' href="https://so.csdn.net/so/search/s.do?q=%E5%BD%BC%E5%B2%B8%E5%9B%BE%E7%BD%91&amp;t=all&amp;o=vip&amp;s=&amp;l=&amp;f=&amp;viparticle=&amp;from_tracking_code=tag_word&amp;from_code=app_blog_art" target="_blank">
+      <span>
+       彼岸图网
+      </span>
+     </a>
+    </div>
+    <span class="ai-article-tag-text">
+     关键词由CSDN通过智能技术生成
+    </span>
    </div>
   </div>
  </div>
@@ -120,7 +155,7 @@ image:
     <p>
      可以看到有很多好看的图片，一页总共21张图片
      <br/>
-     <img alt="在这里插入图片描述" src="../../assets/images/0779b2f597e89b29ce6a33daad537b46.png">
+     <img alt="在这里插入图片描述" src="/assets/images/0779b2f597e89b29ce6a33daad537b46.png">
       <br/>
       我们右键选择
       <code>
@@ -144,9 +179,9 @@ image:
       ，然后随便点在一张图片上面
       <br/>
       <br/>
-      <img alt="在这里插入图片描述" src="../../assets/images/22a543ee72eeceb22c0098cbef848ec0.png">
+      <img alt="在这里插入图片描述" src="/assets/images/22a543ee72eeceb22c0098cbef848ec0.png">
        <br/>
-       <img alt="在这里插入图片描述" src="../../assets/images/f4da8b4de777e335186b2a096793e1c0.png">
+       <img alt="在这里插入图片描述" src="/assets/images/f4da8b4de777e335186b2a096793e1c0.png">
         <br/>
         这时候我们就能看到这张图片的详细信息，
         <code>
@@ -154,7 +189,7 @@ image:
         </code>
         后面的链接就是图片的链接，将鼠标放到链接上就能看到图片，这就是我们这次要爬的
         <br/>
-        <img alt="在这里插入图片描述" src="../../assets/images/d52c6f126d3c6980d536dccae3566c74.png"/>
+        <img alt="在这里插入图片描述" src="/assets/images/d52c6f126d3c6980d536dccae3566c74.png"/>
        </img>
       </img>
      </img>
@@ -188,9 +223,9 @@ image:
      </code>
      刷新，随便点开一张图片
      <br/>
-     <img alt="在这里插入图片描述" src="../../assets/images/213b3652d3e89c50cb4c90a764dfc9fb.png">
+     <img alt="在这里插入图片描述" src="/assets/images/213b3652d3e89c50cb4c90a764dfc9fb.png">
       <br/>
-      <img alt="在这里插入图片描述" src="../../assets/images/cc34325f9a41b48a35a334f35c1028a6.png">
+      <img alt="在这里插入图片描述" src="/assets/images/cc34325f9a41b48a35a334f35c1028a6.png">
        <br/>
        这里我们只需要到两个简单的参数，本次案例只是做一个简单的爬虫教程，其他参数暂时不考虑
       </img>
@@ -227,9 +262,9 @@ image:
      </tbody>
     </table>
     <p>
-     <img alt="" src="../../assets/images/5d9a3f3a183e10c4165bce053b846bba.png">
+     <img alt="" src="/assets/images/5d9a3f3a183e10c4165bce053b846bba.png">
       <br/>
-      <img alt="在这里插入图片描述" src="../../assets/images/3f02aaf69e1d1055c262f2cf40e26115.png">
+      <img alt="在这里插入图片描述" src="/assets/images/3f02aaf69e1d1055c262f2cf40e26115.png">
        <br/>
        参数代码的准备
       </img>
@@ -251,7 +286,7 @@ headers <span class="token operator">=</span> <span class="token punctuation">{<
 <span class="token keyword">print</span><span class="token punctuation">(</span>response<span class="token punctuation">.</span>text<span class="token punctuation">)</span> <span class="token comment"># 打印请求成功的网页源码，和在网页右键查看源代码的内容一样的</span>
 </code></pre>
     <p>
-     <img alt="在这里插入图片描述" src="../../assets/images/dea5e791b95625f16d93053174cbe3ec.png">
+     <img alt="在这里插入图片描述" src="/assets/images/dea5e791b95625f16d93053174cbe3ec.png">
       <br/>
       这时候我们会发现乱码？！！！！这其实也是很多初学者头疼的事情，乱码解决不难
      </img>
@@ -263,7 +298,7 @@ response<span class="token punctuation">.</span>encoding <span class="token oper
     <p>
      看着这些密密麻麻的一大片是不是感觉脑子要炸了，其实我们只需要找到我们所需要的就可以了
      <br/>
-     <img alt="在这里插入图片描述" src="../../assets/images/1271627867cdb860b677944d1b262b3b.png">
+     <img alt="在这里插入图片描述" src="/assets/images/1271627867cdb860b677944d1b262b3b.png">
       <br/>
       <br/>
      </img>
@@ -280,11 +315,12 @@ response<span class="token punctuation">.</span>encoding <span class="token oper
      <br/>
      我们在前面的时候有看到图片信息是什么样子的，根据信息我们可以快速找到我们要的
      <br/>
-     <img alt="在这里插入图片描述" src="../../assets/images/a45a54f9a58803c686b1b8997a22c691.png"/>
-     <br/>
-     <img alt="在这里插入图片描述" src="../../assets/images/41c576e0b32f038f557923d5037d1cf5.png"/>
-     <br/>
-     接下来就是通过正则表达式把一个个图片的链接和名字给匹配出来，存放到一个列表中
+     <img alt="在这里插入图片描述" src="/assets/images/a45a54f9a58803c686b1b8997a22c691.png">
+      <br/>
+      <img alt="在这里插入图片描述" src="/assets/images/41c576e0b32f038f557923d5037d1cf5.png"/>
+      <br/>
+      接下来就是通过正则表达式把一个个图片的链接和名字给匹配出来，存放到一个列表中
+     </img>
     </p>
     <pre><code class="prism language-python"><span class="token keyword">import</span> re
 <span class="token triple-quoted-string string">"""
@@ -302,7 +338,7 @@ image <span class="token operator">=</span> re<span class="token punctuation">.<
     <span class="token keyword">print</span><span class="token punctuation">(</span>content<span class="token punctuation">)</span>
 </code></pre>
     <p>
-     <img alt="在这里插入图片描述" src="../../assets/images/6396baeaa497fb5a1e37ef56eed18b62.png"/>
+     <img alt="在这里插入图片描述" src="/assets/images/6396baeaa497fb5a1e37ef56eed18b62.png"/>
      <br/>
      这样我们的链接和名字就存放到了image列表中了，通过打印我们可以看到以下内容
      <br/>
@@ -322,7 +358,7 @@ image <span class="token operator">=</span> re<span class="token punctuation">.<
      </code>
      ：列表第一个元素中的第二个值，也就是名字
      <br/>
-     <img alt="在这里插入图片描述" src="../../assets/images/b553c80d45136119d10ba609d2b25917.png"/>
+     <img alt="在这里插入图片描述" src="/assets/images/b553c80d45136119d10ba609d2b25917.png"/>
     </p>
     <h4>
      <a id="os_92">
@@ -361,26 +397,26 @@ path <span class="token operator">=</span> <span class="token string">"彼岸图
     <p>
      运行我们就会发现报错了，这是因为我们的图片链接不完整所导致的
      <br/>
-     <img alt="在这里插入图片描述" src="../../assets/images/c1c5770bdbae762aa540200b86b029b8.png"/>
+     <img alt="在这里插入图片描述" src="/assets/images/c1c5770bdbae762aa540200b86b029b8.png"/>
      <br/>
      我们回到图片首页网站，点开一张图片，我们可以在地址栏看到我们的图片链接缺少前面部分，我们复制下来
      <code>
       https://pic.netbian.com
      </code>
      <br/>
-     <img alt="在这里插入图片描述" src="../../assets/images/58bdaf625ba734feb8ba6ad1f118cb80.png"/>
+     <img alt="在这里插入图片描述" src="/assets/images/58bdaf625ba734feb8ba6ad1f118cb80.png"/>
      <br/>
      在获取图片的发送请求地址前加上刚刚复制的
      <code>
       https://pic.netbian.com
      </code>
-     <img alt="在这里插入图片描述" src="../../assets/images/3a5a3782bed52b160ac5ebd941921f68.png"/>
+     <img alt="在这里插入图片描述" src="/assets/images/3a5a3782bed52b160ac5ebd941921f68.png"/>
      <br/>
      运行，OK，获取完毕
      <br/>
-     <img alt="在这里插入图片描述" src="../../assets/images/fa1b17159bc296a750122a65e65b4a7b.png"/>
+     <img alt="在这里插入图片描述" src="/assets/images/fa1b17159bc296a750122a65e65b4a7b.png"/>
      <br/>
-     <img alt="在这里插入图片描述" src="../../assets/images/a351894f8eeafe3ce746e61f44ab7515.png"/>
+     <img alt="在这里插入图片描述" src="/assets/images/a351894f8eeafe3ce746e61f44ab7515.png"/>
     </p>
     <h4>
      <a id="_126">
