--- a/_posts/2025-01-20-2024年博客之星主题创作Android-开发前沿技术跨领域融合与就业技能展望.md
+++ b/_posts/2025-01-20-2024年博客之星主题创作Android-开发前沿技术跨领域融合与就业技能展望.md
@@ -4,7 +4,7 @@ date: 2025-01-20 11:23:08 +0800
 categories: [Android随手笔录]
 tags: [android,小程序,flutter,kotlin,reactnative,taro,androidjetpack]
 image:
-  path: ../../assets/images/cedbd4e0294df0cc39c6866fe38d3dde.ico
+  path: /assets/images/cedbd4e0294df0cc39c6866fe38d3dde.ico
   alt: 2024年博客之星主题创作Android-开发前沿技术跨领域融合与就业技能展望
 ---
 <div class="blog-content-box">
@@ -141,7 +141,7 @@ image:
     </p>
     <div>
      <p class="img-center">
-      <img alt="" height="281" src="../../assets/images/620fb0c6ffe73e1fab4f710bc038d767.png" width="500"/>
+      <img alt="" height="281" src="/assets/images/620fb0c6ffe73e1fab4f710bc038d767.png" width="500"/>
      </p>
     </div>
     <h3 id="1.2%20%E5%A2%9E%E5%BC%BA%E7%8E%B0%E5%AE%9E%EF%BC%88AR%EF%BC%89%E4%B8%8E%E8%99%9A%E6%8B%9F%E7%8E%B0%E5%AE%9E%EF%BC%88VR%EF%BC%89%E7%9A%84%E5%BA%94%E7%94%A8%E6%89%A9%E5%B1%95">
@@ -295,7 +295,7 @@ image:
     </p>
     <div>
      <p class="img-center">
-      <img alt="" height="286" src="../../assets/images/d29e91177968c4401c696b0a289078c0.png" width="500"/>
+      <img alt="" height="286" src="/assets/images/d29e91177968c4401c696b0a289078c0.png" width="500"/>
      </p>
      <p>
       ​
@@ -338,7 +338,7 @@ image:
      就2024年底和年初这段时间去找工作，基本不是鸿蒙就是 Flutter。就算是原生开发，还需要了解一点跨平台技术，或者懂 Flutter 的作为加分项，更甚至需要懂 Android&amp;iOS 原生+Flutter。所以不管是不是牛啊马的，为了不失业只能卷。
     </p>
     <p class="img-center">
-     <img alt="" height="296" src="../../assets/images/c3de5ddc6f52e8ac7ddbcfa55665edb0.png" width="400"/>
+     <img alt="" height="296" src="/assets/images/c3de5ddc6f52e8ac7ddbcfa55665edb0.png" width="400"/>
     </p>
     <h2 id="%E5%9B%9B%E3%80%81%E6%80%BB%E7%BB%93">
      <span style="color:#ed7976;">
