修复tag字符串为数字的问题

--- a/_posts/2025-01-19-2024-CSDN博客之星我的年度总结与创作历程回顾.md
+++ b/_posts/2025-01-19-2024-CSDN博客之星我的年度总结与创作历程回顾.md
@@ -3,13 +3,14 @@ layout: post
 title: 2024-CSDN博客之星我的年度总结与创作历程回顾
 date: 2025-01-19 17:32:40 +0800
 categories: [包罗万象]
-tags: [总结,博文创作,博客之星,java,CSDN,2024]
+tags: [总结, 博文创作, 博客之星, java, CSDN]
 image:
-    path: https://api.vvhan.com/api/bing?rand=sj&artid=145242156
-    alt: 2024-CSDN博客之星我的年度总结与创作历程回顾
+  path: https://api.vvhan.com/api/bing?rand=sj&artid=145242156
+  alt: 2024-CSDN博客之星我的年度总结与创作历程回顾
 artid: 145242156
 render_with_liquid: false
 ---
+
 <p class="artid" style="display:none">$url</p>
 <div class="blog-content-box">
  <div class="article-header-box">
@@ -473,8 +474,10 @@ render_with_liquid: false
         <span class="token class-name">System</span><span class="token punctuation">.</span>out<span class="token punctuation">.</span><span class="token function">println</span><span class="token punctuation">(</span><span class="token string">"4. 💬 评论！"</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
         <span class="token class-name">System</span><span class="token punctuation">.</span>out<span class="token punctuation">.</span><span class="token function">println</span><span class="token punctuation">(</span><span class="token string">"您的支持是我创作的动力！❤️"</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
     <span class="token punctuation">}</span>
+
 <span class="token punctuation">}</span>
 </code></pre>
+
    </div>
    <link href="../../assets/css/markdown_views-a5d25dd831.css" rel="stylesheet"/>
    <link href="../../assets/css/style-e504d6a974.css" rel="stylesheet"/>
@@ -483,5 +486,3 @@ render_with_liquid: false
   </div>
  </article>
 </div>
-
-
