--- a/_posts/2024-09-09-2024年数学建模国赛-35个优秀算法模型优秀论文,备战2024年数学建模国赛目录.md
+++ b/_posts/2024-09-09-2024年数学建模国赛-35个优秀算法模型优秀论文,备战2024年数学建模国赛目录.md
@@ -3,7 +3,7 @@ layout: post
 title: 2024年数学建模国赛-35个优秀算法模型优秀论文,备战2024年数学建模国赛目录
 date: 2024-09-09 20:45:01 +0800
 categories: [算法]
-tags: [算法,数学建模国赛论文优秀案例,数学建模国赛,数学建模,快速完成数学建模论文,2024年数学建模国赛,2024]
+tags: [算法,数学建模国赛论文优秀案例,数学建模国赛,数学建模,快速完成数学建模论文,2024年数学建模国赛]
 image:
     path: https://api.vvhan.com/api/bing?rand=sj&artid=141645779
     alt: 2024年数学建模国赛-35个优秀算法模型优秀论文,备战2024年数学建模国赛目录
