去除数字母的tags，删除重复的文章

--- a/_posts/2020-06-27-二叉搜索树中的搜索.md
+++ b/_posts/2020-06-27-二叉搜索树中的搜索.md
@@ -3,13 +3,14 @@ layout: post
 title: 二叉搜索树中的搜索
 date: 2020-06-27 11:07:48 +0800
 categories: [算法]
-tags: [搜索树,二叉树,leetcode,java,700]
+tags: [搜索树, 二叉树, leetcode, java]
 image:
-    path: https://api.vvhan.com/api/bing?rand=sj&artid=106980131
-    alt: 二叉搜索树中的搜索
+  path: https://api.vvhan.com/api/bing?rand=sj&artid=106980131
+  alt: 二叉搜索树中的搜索
 artid: 106980131
 render_with_liquid: false
 ---
+
 <p class="artid" style="display:none">$url</p>
 <div class="blog-content-box">
  <div class="article-header-box">
@@ -105,5 +106,3 @@ render_with_liquid: false
   </div>
  </article>
 </div>
-
-
