--- a/_posts/2020-12-02-全国大学生嵌入式设计大赛.md
+++ b/_posts/2020-12-02-全国大学生嵌入式设计大赛.md
@@ -3,13 +3,14 @@ layout: post
 title: 全国大学生嵌入式设计大赛
 date: 2020-12-02 21:00:51 +0800
 categories: [Symbian开发]
-tags: [嵌入式,咨询,农业,qt,2010]
+tags: [嵌入式, 咨询, 农业, qt, "2010"]
 image:
-    path: https://api.vvhan.com/api/bing?rand=sj&artid=5330474
-    alt: 全国大学生嵌入式设计大赛
+  path: https://api.vvhan.com/api/bing?rand=sj&artid=5330474
+  alt: 全国大学生嵌入式设计大赛
 artid: 5330474
 render_with_liquid: false
 ---
+
 <p class="artid" style="display:none">$url</p>
 <div class="blog-content-box">
  <div class="article-header-box">
@@ -135,5 +136,3 @@ render_with_liquid: false
   </div>
  </article>
 </div>
-
-
