--- a/_posts/2022-04-17-操作系统知识点汇总王道.md
+++ b/_posts/2022-04-17-操作系统知识点汇总王道.md
@@ -2,14 +2,15 @@
 layout: post
 title: 操作系统知识点汇总王道
 date: 2022-04-17 22:37:28 +0800
-categories: [学习笔记,408]
-tags: [进程,后端]
+categories: [学习笔记]
+tags: [进程, 后端]
 image:
-    path: https://img-blog.csdnimg.cn/fb0505ea5af447dfad330872f4f6500c.png?x-oss-process&#61;image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5p2O5be05be0,size_20,color_FFFFFF,t_70,g_se,x_16
-    alt: 操作系统知识点汇总王道
+  path: https://img-blog.csdnimg.cn/fb0505ea5af447dfad330872f4f6500c.png?x-oss-process&#61;image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5p2O5be05be0,size_20,color_FFFFFF,t_70,g_se,x_16
+  alt: 操作系统知识点汇总王道
 artid: 124201274
 render_with_liquid: false
 ---
+
 <p class="artid" style="display:none">$url</p>
 <div class="blog-content-box">
  <div class="article-header-box">
@@ -3040,5 +3041,3 @@ render_with_liquid: false
   </div>
  </article>
 </div>
-
-
