--- a/_posts/2023-12-01-金山卫士开源了.md
+++ b/_posts/2023-12-01-金山卫士开源了.md
@@ -3,13 +3,14 @@ layout: post
 title: 金山卫士开源了
 date: 2023-12-01 20:40:11 +0800
 categories: [程序人生]
-tags: [金山,apache,360]
+tags: [金山, apache, "360"]
 image:
-    path: https://api.vvhan.com/api/bing?rand=sj&artid=6048378
-    alt: 金山卫士开源了
+  path: https://api.vvhan.com/api/bing?rand=sj&artid=6048378
+  alt: 金山卫士开源了
 artid: 6048378
 render_with_liquid: false
 ---
+
 <p class="artid" style="display:none">$url</p>
 <div class="blog-content-box">
  <div class="article-header-box">
@@ -50,5 +51,3 @@ render_with_liquid: false
   </div>
  </article>
 </div>
-
-
