--- a/_posts/2024-09-13-微软技术专家互动沙龙,微软官方将提供奖品.md
+++ b/_posts/2024-09-13-微软技术专家互动沙龙,微软官方将提供奖品.md
@@ -3,13 +3,14 @@ layout: post
 title: 微软技术专家互动沙龙,微软官方将提供奖品
 date: 2024-09-13 22:32:23 +0800
 categories: [我参加的微软活动]
-tags: [活动,微软,office,2010]
+tags: [活动, 微软, office, "2010"]
 image:
-    path: https://api.vvhan.com/api/bing?rand=sj&artid=5687301
-    alt: 微软技术专家互动沙龙,微软官方将提供奖品
+  path: https://api.vvhan.com/api/bing?rand=sj&artid=5687301
+  alt: 微软技术专家互动沙龙,微软官方将提供奖品
 artid: 5687301
 render_with_liquid: false
 ---
+
 <p class="artid" style="display:none">$url</p>
 <div class="blog-content-box">
  <div class="article-header-box">
@@ -86,5 +87,3 @@ render_with_liquid: false
   </div>
  </article>
 </div>
-
-
