1、修复yaml的head变量字符串没有加引号导致了冒号出现分割了成了变量的问题。2 、去除分类为空字符串的问题

--- a/_posts/2021-02-23-5967264.md
+++ b/_posts/2021-02-23-5967264.md
@@ -2,13 +2,13 @@
 layout: post
 title: asp.net怎么获取服务器操作系统版本信息
 date: 2021-02-23 19:24:56 +0800
-description: 文章浏览阅读2.6k次。 //操作系统的版本信息: public static string Sys
+description: "文章浏览阅读2.6k次。 //操作系统的版本信息: public static string Sys"
 keywords: asp读取系统版本
-categories: ['浏览器']
-tags: ['浏览器', '服务器', 'windows', 'string', 'linux', 'asp.net']
+categories: ["浏览器"]
+tags: ["浏览器", "服务器", "windows", "string", "linux", "asp.net"]
 image:
-    path: https://api.vvhan.com/api/bing?rand=sj&artid=5967264
-    alt: asp.net怎么获取服务器操作系统版本信息
+  path: https://api.vvhan.com/api/bing?rand=sj&artid=5967264
+  alt: asp.net怎么获取服务器操作系统版本信息
 artid: 5967264
 render_with_liquid: false
 ---
@@ -100,19 +100,19 @@ public static string SystemCheck()
             return "Windows";
         }
         return "unknow";
-      
+
     }
+
 HttpContext.Current.Request.Browser.Type //浏览器版本</textarea>
-      用户登录次数你需要做个计数器在Global文件中!
-      <br/>
-      希望对你有帮助
-     </dl>
-    </div>
+用户登录次数你需要做个计数器在 Global 文件中!
+<br/>
+希望对你有帮助
+</dl>
+</div>
+
    </div>
   </div>
  </article>
  <p alt="68747470:733a2f2f626c6f672e6373646e2e6e65742f656e6369656e71:692f61727469636c652f64657461696c732f35393637323634" class_="artid" style="display:none">
  </p>
 </div>
-
-
