--- a/_posts/2024-05-16-7250800.md
+++ b/_posts/2024-05-16-7250800.md
@@ -4,11 +4,11 @@ title: vi中搜索关键字
 date: 2024-05-16 15:20:33 +0800
 description: 文章浏览阅读1w次。vi有两种模式，命令模式和编辑模式，用esc和i按键来切换。要查找文中的关键字，
 keywords: vi搜索关键字
-categories: ['']
+categories: []
 tags: []
 image:
-    path: https://api.vvhan.com/api/bing?rand=sj&artid=7250800
-    alt: vi中搜索关键字
+  path: https://api.vvhan.com/api/bing?rand=sj&artid=7250800
+  alt: vi中搜索关键字
 artid: 7250800
 render_with_liquid: false
 ---
@@ -51,5 +51,3 @@ render_with_liquid: false
  <p alt="68747470733a2f2f:626c6f672e6373646e2e6e65742f7169756368616e67796f6e:672f61727469636c652f64657461696c732f37323530383030" class_="artid" style="display:none">
  </p>
 </div>
-
-
