--- a/_posts/2024-11-29-1808149.md
+++ b/_posts/2024-11-29-1808149.md
@@ -4,11 +4,11 @@ title: 对软件工程专业的认识
 date: 2024-11-29 19:48:39 +0800
 description: 文章浏览阅读1w次。  昨天听了李老师的计算机软件工程专业的专业介绍，对软件工程专业的学习内容有了进
 keywords: 对于软件技术专业的认识
-categories: ['']
+categories: []
 tags: []
 image:
-    path: https://api.vvhan.com/api/bing?rand=sj&artid=1808149
-    alt: 对软件工程专业的认识
+  path: https://api.vvhan.com/api/bing?rand=sj&artid=1808149
+  alt: 对软件工程专业的认识
 artid: 1808149
 render_with_liquid: false
 ---
@@ -46,5 +46,3 @@ render_with_liquid: false
  <p alt="68747470733a2f2f:626c6f672e6373646e2e6e65742f77616e677a697169313938:372f61727469636c652f64657461696c732f31383038313439" class_="artid" style="display:none">
  </p>
 </div>
-
-
