--- a/_posts/2012-12-20-8341774.md
+++ b/_posts/2012-12-20-8341774.md
@@ -4,11 +4,11 @@ title: 数学如此高等,实乃误人子弟也
 date: 2012-12-20 04:21:56 +0800
 description: 文章浏览阅读3k次。       近日，翻阅影印版《高等数学》教材（系盗版图书），封面冠以“普通高等
 keywords: 数学如此高等，实乃误人子弟也
-categories: ['']
+categories: []
 tags: []
 image:
-    path: https://api.vvhan.com/api/bing?rand=sj&artid=8341774
-    alt: 数学如此高等,实乃误人子弟也
+  path: https://api.vvhan.com/api/bing?rand=sj&artid=8341774
+  alt: 数学如此高等,实乃误人子弟也
 artid: 8341774
 render_with_liquid: false
 ---
@@ -695,5 +695,3 @@ render_with_liquid: false
  <p alt="68747470733a2f:2f626c6f672e6373646e2e6e65742f7975616e6d656e673030:312f61727469636c652f64657461696c732f38333431373734" class_="artid" style="display:none">
  </p>
 </div>
-
-
