--- a/_posts/2024-06-13-7419193.md
+++ b/_posts/2024-06-13-7419193.md
@@ -4,11 +4,11 @@ title: 在数学中sup表示上界,inf表示下界.
 date: 2024-06-13 08:46:06 +0800
 description: 文章浏览阅读5.5k次。在数学中sup表示上界,inf表示下界._上下限函数的写法
 keywords: 上下限函数的写法
-categories: ['']
+categories: []
 tags: []
 image:
-    path: https://api.vvhan.com/api/bing?rand=sj&artid=7419193
-    alt: 在数学中sup表示上界,inf表示下界.
+  path: https://api.vvhan.com/api/bing?rand=sj&artid=7419193
+  alt: 在数学中sup表示上界,inf表示下界.
 artid: 7419193
 render_with_liquid: false
 ---
@@ -35,5 +35,3 @@ render_with_liquid: false
  <p alt="68747470733a2f2f626c:6f672e6373646e2e6e65742f666f726576657264656e677765:692f61727469636c652f64657461696c732f37343139313933" class_="artid" style="display:none">
  </p>
 </div>
-
-
