修复yaml的head变量字符串没有加引号导致了冒号出现分割了成了变量的问题。

--- a/_posts/2025-01-06-7036907.md
+++ b/_posts/2025-01-06-7036907.md
@@ -3,12 +3,12 @@ layout: post
 title: 操作系统PV操作的几个例子
 date: 2025-01-06 13:50:55 +0800
 description: 文章浏览阅读1.2w次，点赞7次，收藏58次。操作系统中PV操作的几个例子题1：面包师有很多面包，由
-keywords: pv操作实现s1:a=x+y,s2:b=z+1,s3:c=a-b,s4:w=c+1
-categories: ['程序人生']
-tags: ['算法', 'semaphore', 'c']
+keywords: "pv操作实现s1:a=x+y,s2:b=z+1,s3:c=a-b,s4:w=c+1"
+categories: ["程序人生"]
+tags: ["算法", "semaphore", "c"]
 image:
-    path: https://api.vvhan.com/api/bing?rand=sj&artid=7036907
-    alt: 操作系统PV操作的几个例子
+  path: https://api.vvhan.com/api/bing?rand=sj&artid=7036907
+  alt: 操作系统PV操作的几个例子
 artid: 7036907
 render_with_liquid: false
 ---
@@ -54,218 +54,207 @@ Consumer()
 	//等待叫号i并购买面包
 }
 
-
 Seller()
 {
-	while(1)
-	{
-		p(mutex_j);
-		if(j&lt;i) //号j已有顾客取走并等待
-		{
-			//叫号j
-			j++;
-			v(mutex_j);
-			//销售面包
-		}
-		else
-		{
-			v(mutex_j);
-			//休息片刻
-		}
-	}
+while(1)
+{
+p(mutex_j);
+if(j&lt;i) //号 j 已有顾客取走并等待
+{
+//叫号 j
+j++;
+v(mutex_j);
+//销售面包
+}
+else
+{
+v(mutex_j);
+//休息片刻
+}
+}
 }
 </code></pre>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    题2：三个合作进程P1，P2，P3，它们都需要通过同一设备输入各自的数据a,b,c，该输入设备必须互斥地使用，而且其第一个数据必须有P1进程读取，第二个数据必须由P2进程读取，第三个数据必须由P3进程读取。然后三个进程分别对输入数据进行下列计算：
-    <br/>
-    P1:x=a+b;
-    <br/>
-    P2:y=a*b;
-    <br/>
-    P3:z=y+c-a;
-    <br/>
-    最后P1进程通过所连的打印机将结果x,y,z的值打印出来，请用信号量实现他们同步。
-    <br/>
-    <br/>
-    <br/>
-    思路：为了控制三个进程依次使用输入设备进行输入，需分别设置三个信号量S1，S2，S3，其中S1初值为1，S2和S3初值为0.使用上述信号量后，三个进程不会同时使用输入设备，故不必再为输入设备设置互斥信号量。另外，还需要设置信号量Sb,Sy,Sz来表示数据b是否已经输入，以及y,z是否已经计算完成，他们的初值均为0。
-    <br/>
-    <br/>
-    <br/>
-    代码：
-    <br/>
-    <pre><code class="language-cpp">P1()
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+题 2：三个合作进程 P1，P2，P3，它们都需要通过同一设备输入各自的数据 a,b,c，该输入设备必须互斥地使用，而且其第一个数据必须有 P1 进程读取，第二个数据必须由 P2 进程读取，第三个数据必须由 P3 进程读取。然后三个进程分别对输入数据进行下列计算：
+<br/>
+P1:x=a+b;
+<br/>
+P2:y=a\*b;
+<br/>
+P3:z=y+c-a;
+<br/>
+最后 P1 进程通过所连的打印机将结果 x,y,z 的值打印出来，请用信号量实现他们同步。
+<br/>
+<br/>
+<br/>
+思路：为了控制三个进程依次使用输入设备进行输入，需分别设置三个信号量 S1，S2，S3，其中 S1 初值为 1，S2 和 S3 初值为 0.使用上述信号量后，三个进程不会同时使用输入设备，故不必再为输入设备设置互斥信号量。另外，还需要设置信号量 Sb,Sy,Sz 来表示数据 b 是否已经输入，以及 y,z 是否已经计算完成，他们的初值均为 0。
+<br/>
+<br/>
+<br/>
+代码：
+<br/>
+<pre><code class="language-cpp">P1()
 {
-	P(S1);
-	//从输入设备输入数据a
-	V(S2);
-	P(Sb);
-	x=a+b;
-	P(Sy);
-	P(Sz);
-	//使用打印机打印出x,y,z的结果
+P(S1);
+//从输入设备输入数据 a
+V(S2);
+P(Sb);
+x=a+b;
+P(Sy);
+P(Sz);
+//使用打印机打印出 x,y,z 的结果
 }
-
 
 P2()
 {
-	P(S2);
-	//从输入设备输入数据b
-	V(S3);
-	V(Sb);
-	y=a*b;
-	V(Sy);
-	V(Sy);
+P(S2);
+//从输入设备输入数据 b
+V(S3);
+V(Sb);
+y=a\*b;
+V(Sy);
+V(Sy);
 }
-
 
 P3()
 {
-	P(S3);
-	//从输入设备输入数据c
-	P(Sy);
-	z=y+c-a;
-	V(Sz);
+P(S3);
+//从输入设备输入数据 c
+P(Sy);
+z=y+c-a;
+V(Sz);
 }
 </code></pre>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    题3：在读者写者问题中，允许多个读者同时读数据，但不允许写者与其他写者进程同时访问数据。另外要保证：一旦有写者等待，新到达的读者必须等待，知道该写者完成数据访问为止，用PV操作实现。
-    <br/>
-    <br/>
-    <br/>
-    思路：这是一个“写优先”的读者-写者问题，在经典的“读优先”的读者-写者文章的PV操作中，只要再添加一个信号量w=1,用以在写进程到达时封锁后续进程，即可实现“写优先”
-    <br/>
-    <br/>
-    <br/>
-    代码：
-    <br/>
-    <pre><code class="language-cpp">int count=1;//记录当前读者数量
-semaphore mutex=1;//保护更新count变量时的互斥
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+题 3：在读者写者问题中，允许多个读者同时读数据，但不允许写者与其他写者进程同时访问数据。另外要保证：一旦有写者等待，新到达的读者必须等待，知道该写者完成数据访问为止，用 PV 操作实现。
+<br/>
+<br/>
+<br/>
+思路：这是一个“写优先”的读者-写者问题，在经典的“读优先”的读者-写者文章的 PV 操作中，只要再添加一个信号量 w=1,用以在写进程到达时封锁后续进程，即可实现“写优先”
+<br/>
+<br/>
+<br/>
+代码：
+<br/>
+<pre><code class="language-cpp">int count=1;//记录当前读者数量
+semaphore mutex=1;//保护更新 count 变量时的互斥
 semaphore rw=1;//保证读者和写者互斥地访问文件
 semaphore w=1;//实现“写优先”
 
-
 writer()
 {
-	while(1)
-	{
-		P(w);
-		P(rw);
-		//writing
-		V(rw);
-		V(w);
-	}
+while(1)
+{
+P(w);
+P(rw);
+//writing
+V(rw);
+V(w);
 }
-
-
-
+}
 
 reader()
 {
-	while(1)
-	{
-		P(w);
-		P(mutex);
-		if(count==0)
-		{
-			P(rw);
-		}
-		count++;
-		V(mutex);
-		V(w);
-		//reading
-		P(mutex);
-		count--;
-		if(count==0)
-		{
-			V(rw);
-		}
-		V(mutex);
-	}
+while(1)
+{
+P(w);
+P(mutex);
+if(count==0)
+{
+P(rw);
+}
+count++;
+V(mutex);
+V(w);
+//reading
+P(mutex);
+count--;
+if(count==0)
+{
+V(rw);
+}
+V(mutex);
+}
 }
 </code></pre>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <p>
-     题4：有桥如图，车流方向如箭头所示，假设该桥上不允许两车交会，但允许同方向多个车一次通过（桥上可有多个同方向行驶的车），试用信号量PV实现
-    </p>
-    <p>
-     <img alt="" src="http://hi.csdn.net/attachment/201112/3/0_1322878376335r.gif">
-      <br/>
-     </img>
-    </p>
-    <br/>
-    <br/>
-    代码：
-    <br/>
-    <pre><code class="language-cpp">int countSN=0;//表示从南到北的汽车数量
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<p>
+题 4：有桥如图，车流方向如箭头所示，假设该桥上不允许两车交会，但允许同方向多个车一次通过（桥上可有多个同方向行驶的车），试用信号量 PV 实现
+</p>
+<p>
+<img alt="" src="http://hi.csdn.net/attachment/201112/3/0_1322878376335r.gif">
+<br/>
+</img>
+</p>
+<br/>
+<br/>
+代码：
+<br/>
+<pre><code class="language-cpp">int countSN=0;//表示从南到北的汽车数量
 int countNS=0;//表示从北到南的汽车数量
-semaphore mutexSN=1;//保护countSN
-semaphore mutexNS=1;//保护countNS
+semaphore mutexSN=1;//保护 countSN
+semaphore mutexNS=1;//保护 countNS
 semaphore bridge=1;//互斥访问桥
-
 
 StoN()
 {
-	p(mutexSN);
-	if(countSN==0)
-	{
-		p(bridge);
-	}
-	countSN++;
-	v(mutexSN);
-	//过桥
-	p(mutexSN);
-	countSN--;
-	if(countSN==0)
-	{
-		v(bridge);
-	}
-	v(mutexSN);
+p(mutexSN);
+if(countSN==0)
+{
+p(bridge);
 }
-
+countSN++;
+v(mutexSN);
+//过桥
+p(mutexSN);
+countSN--;
+if(countSN==0)
+{
+v(bridge);
+}
+v(mutexSN);
+}
 
 NtoS()
 {
-	p(mutexNS);
-	if(countNS==0)
-	{
-		p(bridge);
-	}
-	countNS++;
-	v(mutexNS);
-	//过桥
-	p(mutexNS);
-	countNS--;
-	if(countNS==0)
-	{
-		v(bridge);
-	}
-	v(mutexNS);
-	
+p(mutexNS);
+if(countNS==0)
+{
+p(bridge);
+}
+countNS++;
+v(mutexNS);
+//过桥
+p(mutexNS);
+countNS--;
+if(countNS==0)
+{
+v(bridge);
+}
+v(mutexNS);
 }</code></pre>
-    <br/>
-    <br/>
+<br/>
+<br/>
+
    </div>
   </div>
  </article>
  <p alt="68747470733a2f2f626c6f:672e6373646e2e6e65742f6a6a31323334356a6a3139383939:392f61727469636c652f64657461696c732f37303336393037" class_="artid" style="display:none">
  </p>
 </div>
-
-
