修复文档的个别文案错误

--- a/content/posts/2020-08-19-8037491.md
+++ b/content/posts/2020-08-19-8037491.md
@@ -51,13 +51,13 @@ paip.提升用户体验---提高兼容性无JS支持总结
   
 {
   
-var x=document.getElementById("WebUserControl1\_ImageButton1");
+var x=document.getElementById("WebUserControl1_ImageButton1");
   
 x.οnclick=function(){
   
 //alert();
   
-return login\_click();
+return login_click();
   
 }   ;
   
