--- a/content/posts/2021-10-20-1638712.md
+++ b/content/posts/2021-10-20-1638712.md
@@ -27,9 +27,10 @@ pic.asp(显示图片页)    读取图片路径-->src="###"
   
 目前C#不是很熟悉,所以用了asp和C#合用的手法,上传用C#,显示用asp
 
+```C#
 -----upload.aspx-----
 
-<%@ Page Language="C#" AutoEventWireup="true" CodeFile="upload.aspx.cs" Inherits="\_upload" %>
+<%@ Page Language="C#" AutoEventWireup="true" CodeFile="upload.aspx.cs" Inherits="_upload" %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "
 <http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd>
@@ -53,7 +54,7 @@ pic.asp(显示图片页)    读取图片路径-->src="###"
   
 <input id="File1" type="file" runat="server" />
   
-<input id="Button1" type="button" value="上传" onserverclick="Button1\_ServerClick" runat="server" />
+<input id="Button1" type="button" value="上传" onserverclick="Button1_ServerClick" runat="server" />
   
 </div>
   
@@ -62,7 +63,9 @@ pic.asp(显示图片页)    读取图片路径-->src="###"
 </body>
   
 </html>
+```
 
+```cs
 -----upload.aspx.cs-----
 
 using System;
@@ -85,17 +88,17 @@ using System.Web.UI.WebControls.WebParts;
   
 using System.Web.UI.HtmlControls;
 
-public partial class \_upload : System.Web.UI.Page
+public partial class _upload : System.Web.UI.Page
   
 {
   
-protected void Page\_Load(object sender, EventArgs e)
+protected void Page_Load(object sender, EventArgs e)
   
 {
 
 }
   
-protected void Button1\_ServerClick(object sender, EventArgs e)
+protected void Button1_ServerClick(object sender, EventArgs e)
   
 {
   
@@ -116,3 +119,4 @@ Page.Response.Write(uploadpath);
 }
   
 }
+```
