修复文章markdown错误

--- a/content/posts/2024-12-12-6081894.md
+++ b/content/posts/2024-12-12-6081894.md
@@ -26,15 +26,20 @@ featuredImagePreview: https://bing.ee123.net/img/rand?artid=6081894
 
 下面介绍一下五种常见的网页自动跳转方法，以及搜索引擎对这些跳转方法的辨识能力。
 
-1. 第一种网页自动跳转方法：meta refresh自动跳转法 在网页的head区域的meta refresh标签中，加入自动跳转代码，可实现网页的立即或延时自动跳转。 示例如下： <meta http-equiv="refresh" content="10;url=http://xfbbs.com/"> 上述html代码中的“10”是延时跳转的时间，单位是秒。如果设为0，就表示立即跳转。“http://xfbbs.com”是跳转的目标地址，可以是同一域名下的站内相对路径，也可以是不同域名的站外地址。 由于搜索引擎能够读取html，所以对于这种自动跳转方法，搜索引擎是能够自动检测出来的。 被视为作弊，则主要看跳转时间。如果跳转时间为0，就可能会被视为作弊，从而受到惩罚。如果有时间延迟（一般3秒以上），就会被视为正常应用。
-2. 第二种网页自动跳转方法：body onload自动跳转法 在网页加载时通过onload事件指定parent.location进行自动跳转。 示例如下： <body οnlοad="parent.location='http://xfbbs.com'"> 这种方法与第一种方法一样，能够被搜索引擎识别。
-3. 第三种网页自动跳转方法：javascript自动跳转法 javascript可以实现网页的自动跳转，如果要实现立即跳转，将跳转代码放在网页的head区域即可。 示例如下： <script language="javascript"> location.replace("http://xfbbs.com/yule/tietu/") </script> 其中的“http://xfbbs.com/yule/tietu/”是重定向目标地址。 由于搜索引擎无法解析javascript，所以搜索引擎便无法识别用javascript脚本进行的自动跳转。
-4. 第四种网页自动跳转方法：表单自动跳转法 对于表单大家都很熟悉，就是将表单中填写的内容，提交到action参数中指定的url地址中，目标url再对接收到的数据进行处理。利用这一点，我们可间接的实现网页跳转，只不过，我们并不需要提交任何表单内容。再结合javascript脚本，可以对表单进行自 动提交。 示例如下： <form name="form1" action=http://xfbbs.com/index.html method="get"> </form> <script language="javascript"> document.form1.submit() </script> 其中form1名称任意，但二处form1应该统一。action中的url地址必须以文件名结尾，例如“action=http://xfbbs.com/”或“action=http://xfbbs.com/yule”便是不规范写法。method可以是get也可以是post，但根据我的经验，提交空表单时最好使用get。 众所周知，由于搜索引擎的蜘蛛程序是不会填写表单的，所以搜索引擎便无法识别通过这种方法实现的网页自动跳转。
-5. 第五种网页自动跳转方法：程序跳转法（response.redirect 、server.transfer） 每种程序都有各自的页面跳转方法，例如asp中使用response.redirect 来进行跳转，跳转范例如下： response.redirect "http://xfbbs.com" 它的作用是，asp程序运行到该行代码后，会立即跳转到目标url地址中去。 在asp中，除了使用response.redirect 做跳转外，还有一个跳转方法，用server.transfer进行跳转，跳转范例如下： response.redirect "/yule/tietu/index.html" 注意，这里的url地址，必须是站内地址，且url地址必须以文件名结尾，例如 response.redirect "/yule/tietu/" 便是错误用法。 response.redirect和server.transfer都能实现网页自动跳转，但二者也有不同之处，前者可以跳转到站内url，也可以跳转到站外url，而后者只能跳转到站内文件，且浏览器地址栏的url将保持不变。server.transfer还有许多好处，这里不多详述，大家可在搜索引擎中查找它的更多资料。 使用response.redirect 跳转虽然是在
+1. 第一种网页自动跳转方法：meta refresh自动跳转法 在网页的head区域的meta refresh标签中，加入自动跳转代码，可实现网页的立即或延时自动跳转。 示例如下： `<meta http-equiv="refresh" content="10;url=http://xfbbs.com/">` 上述html代码中的“10”是延时跳转的时间，单位是秒。如果设为0，就表示立即跳转`。“http://xfbbs.com”`是跳转的目标地址，可以是同一域名下的站内相对路径，也可以是不同域名的站外地址。 由于搜索引擎能够读取html，所以对于这种自动跳转方法，搜索引擎是能够自动检测出来的。 被视为作弊，则主要看跳转时间。如果跳转时间为0，就可能会被视为作弊，从而受到惩罚。如果有时间延迟（一般3秒以上），就会被视为正常应用。
+2. 第二种网页自动跳转方法：body onload自动跳转法 在网页加载时通过onload事件指定parent.location进行自动跳转。 示例如下： `<body οnlοad="parent.location='http://xfbbs.com'"> `这种方法与第一种方法一样，能够被搜索引擎识别。
+3. 第三种网页自动跳转方法：javascript自动跳转法 javascript可以实现网页的自动跳转，如果要实现立即跳转，将跳转代码放在网页的head区域即可。 示例如下： 
+```html
+<script language="javascript"> location.replace("http://xfbbs.com/yule/tietu/") </script> 
+```
+其中的`“http://xfbbs.com/yule/tietu/”`是重定向目标地址。 由于搜索引擎无法解析javascript，所以搜索引擎便无法识别用javascript脚本进行的自动跳转。
+
+4. 第四种网页自动跳转方法：表单自动跳转法 对于表单大家都很熟悉，就是将表单中填写的内容，提交到action参数中指定的url地址中，目标url再对接收到的数据进行处理。利用这一点，我们可间接的实现网页跳转，只不过，我们并不需要提交任何表单内容。再结合javascript脚本，可以对表单进行自 动提交。 示例如下： `<form name="form1" action=http://xfbbs.com/index.html method="get"> </form> <script language="javascript"> document.form1.submit() </script> `其中form1名称任意，但二处form1应该统一。action中的url地址必须以文件名结尾，例如`“action=http://xfbbs.com/”或“action=http://xfbbs.com/yule”`便是不规范写法。method可以是get也可以是post，但根据我的经验，提交空表单时最好使用get。 众所周知，由于搜索引擎的蜘蛛程序是不会填写表单的，所以搜索引擎便无法识别通过这种方法实现的网页自动跳转。
+5. 第五种网页自动跳转方法：程序跳转法`（response.redirect 、server.transfer）` 每种程序都有各自的页面跳转方法，例如asp中使用`response.redirec`t 来进行跳转，跳转范例如下： `response.redirect "http://xfbbs.com"` 它的作用是，asp程序运行到该行代码后，会立即跳转到目标url地址中去。 在asp中，除了使用response.redirect 做跳转外，还有一个跳转方法，用server.transfer进行跳转，跳转范例如下： `response.redirect "/yule/tietu/index.html" `注意，这里的url地址，必须是站内地址，且url地址必须以文件名结尾，例如 `response.redirect "/yule/tietu/" `便是错误用法。` response.redirect和server.transfer`都能实现网页自动跳转，但二者也有不同之处，前者可以跳转到站内url，也可以跳转到站外url，而后者只能跳转到站内文件，且浏览器地址栏的url将保持不变。`server.transfer`还有许多好处，这里不多详述，大家可在搜索引擎中查找它的更多资料。 使用`response.redirect `跳转虽然是在
    **服务器**
    端完成跳转的，但它最终是转换成html后在客户端执行的，因此，也能被搜索引擎识别，过多的使用亦会被当作作弊处理。 如果是在同一
    **网站**
-   内部的不同网页间跳转，建议使用server.transfer跳转，server.transfer肯定不会被搜索引擎视为作弊。
+   内部的不同网页间跳转，建议使用`server.transfer`跳转，`server.transfer`肯定不会被搜索引擎视为作弊。
 
 转自：
 <http://hi.baidu.com/php_vip/blog/item/900e91ee7c093231acafd5c8.html>
