修复文档错误

--- a/content/posts/2021-12-07-4529713.md
+++ b/content/posts/2021-12-07-4529713.md
@@ -19,10 +19,11 @@ featuredImagePreview: https://bing.ee123.net/img/rand?artid=4529713
 # 通过谷歌Google轻松拥有自己的站内搜索代码
 
 可以自己注册一个谷歌Google的账号后，在
-[Google自定义搜索](可以自己注册一个谷歌的账号后在定制搜索引擎，其中有一个选项就是选择将搜索结果展示在谷歌的网站还是你自己制定的网页上，选择后者生产的代码有两段一段是搜索框的代码，另一段是搜索结果的代码你分别放在相应的位置就可以了。)
+`Google自定义搜索`
 来定制搜索引擎。其中有一个选项来选择将搜索结果展示在谷歌的网站还是你自己制定的网页上。若选择后者产生的
 代码有两段：一段是搜索框的代码，另一段是搜索结果的代码。分别将它们放在相应的位置就可以了。
-[Google自定义搜索](可以自己注册一个谷歌的账号后在定制搜索引擎，其中有一个选项就是选择将搜索结果展示在谷歌的网站还是你自己制定的网页上，选择后者生产的代码有两段一段是搜索框的代码，另一段是搜索结果的代码你分别放在相应的位置就可以了。)
+
+`Google自定义搜索`
 中有详细的说明。下面是我产生的搜索本站的搜索框。
 
 
@@ -31,8 +32,9 @@ featuredImagePreview: https://bing.ee123.net/img/rand?artid=4529713
 
 <script src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en" type="text/javascript"></script>
 
-代码：
+## 代码：
 
+```html
 <form id="cse-search-box" action="http://www.google.com/cse">
 </form>
 <p>
@@ -47,8 +49,9 @@ featuredImagePreview: https://bing.ee123.net/img/rand?artid=4529713
 <input name="sa" type="submit" value="Search" />
 </div>
 </form>
+```
 
-链接：
+## 链接：
 
 [谷歌Google站内搜索代码](http://www.goodfb.com/Html/?293.html)
 
@@ -57,11 +60,3 @@ featuredImagePreview: https://bing.ee123.net/img/rand?artid=4529713
 [一分钟加入google站内搜索代码|只有7行最精简](http://gnaw0725.blogbus.com/logs/8297325.html)
 
 [Google和百度、雅虎的站内搜索代码](http://www.williamlong.info/archives/447.html)
-
-## 
-
-## 
-
-##### 
-
-###
