rspress的一些配置

--- a/docs/blog/2020-03-31日-安卓Target29API升级修改点.md
+++ b/docs/blog/2020-03-31日-安卓Target29API升级修改点.md
@@ -266,7 +266,7 @@ Process: screenrecorder.recorder.editor, PID: 6623
 
 > 解决方法使用了RecycleView的方式替换，引入了新框架库：
 
-```gradle
+```groovy
 implementation 'com.tonicartos:superslim:0.4.13'
 ```
 
