--- a/_posts/2020-6-4-前台服务和通知相关排查.md
+++ b/_posts/2020-6-4-前台服务和通知相关排查.md
@@ -1,7 +1,7 @@
 ---
 layout:  post
 title:  "Android 前台服务和通知相关排查"
-date:  2020-6-4 11:40:00 +0800
+date:  2020-6-4T11:40:00+08:00
 categories:  Android ForegroundService 前台服务 通知
 tags: Android  ForegroundService 前台服务 通知
 author: 林建有
