more or truncate

--- a/_posts/2025-07-07-搭建个人学习工作用的v2ray-VPN.md
+++ b/_posts/2025-07-07-搭建个人学习工作用的v2ray-VPN.md
@@ -20,7 +20,8 @@ image: "https://api.vvhan.com/api/bing?rand=sj&t=2025-07-07"
 根据自己的需要，选择无限流量还是有限的带宽流量。当然如果经济允许可以稍微购买些性能更好的主机。比如双核vCPU或4核vCPU的套餐。鄙人买的是单核每年10美元左右的套餐：https://vpshostingservice.co/ 。优惠套餐不是每次都一样，可以时刻关注有最新优惠促销活动。
 
 一般都是买linux平台的vps主机，服务器基本都是linux平台的无界面主机，只需要终端控制台即可方便安装各种软件。
-
+<!-- truncate -->
+<!-- more -->
 ## 购买域名地址
 
 ### 域名平台选择
